잉 7월 14일 수요일 계획 완료

--- a/잉/7월11일~7월17일.md
+++ b/잉/7월11일~7월17일.md
@@ -16,6 +16,6 @@
 - [x] JPA 미션 2단계
 
 ### 7월 14일 (목)
-- [ ] 티타임 개발
-- [ ] JPA 8장 읽기 
-- [ ] CI/CD 테코블 읽기 
+- [x] 티타임 개발
+- [x] JPA 8장 읽기 
+- [x] CI/CD 테코블 읽기 
