[파랑] 7월15일 계획

--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -29,3 +29,11 @@
 - [x] JPA auditing 적용
 - [x] JPA 스터디
 - [x] 21시 필라테스
+
+### 7월 15일 (금)
+- [ ] 알록달록 미니 세미나 준비
+  - [ ] JPA Slice & Page
+  - [ ] JPA auditing
+- [ ] auditing 구현 수정
+- [ ] 알록달록 찐한 회고
+- [ ] 뀨키즈 회식
