--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -30,7 +30,13 @@
 
 ## 7월 14일 (목)
 
-- [ ] import prettier 설정
-- [ ] 모달 컴포넌트 구현
-  - [ ] 로그인
-  - [ ] 카테고리 생성
+- [x] import prettier 설정
+- [x] 모달 컴포넌트 구현
+  - [x] 로그인
+  - [x] 카테고리 생성
+
+## 7월 15일 (금)
+
+- [ ] 로그인 기능 구현
+- [ ] 16시 알록달록 세미나
+- [ ] 17시 알록달록 회고
