--- a/오리/7월11일~7월17일.md
+++ b/오리/7월11일~7월17일.md
@@ -16,6 +16,11 @@
 - [x] sonar cloud 글쓰기
 
 ### 7월 14일(목)
-- [ ] rest docs 적용
-- [ ] 스프린트1 이슈한개 처리
-- [ ] 젠킨스 공부하기
+- [x] rest docs 적용
+- [x] 스프린트1 이슈한개 처리
+- [x] 젠킨스 공부하기
+
+### 7월 15일(금)
+- [ ] 프론트 플로우 회의
+- [ ] 백 api 설계
+- [ ] 배포 공부하기
