--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -32,3 +32,12 @@
 - [x] 데일리 회의
 - [x] 잔업...
 - [x] git 공부..
+
+
+## 7월 15일
+
+- [ ] 프로젝트 회고 회의
+- [ ] 그룹 기능 일부 구현..
+- [ ] 인증 기능 공부
+- [ ] 이슈등록
+- [ ] 근로 글 가져오기 기능 조사
