--- a/잉/7월11일~7월17일.md
+++ b/잉/7월11일~7월17일.md
@@ -21,8 +21,8 @@
 - [x] CI/CD 테코블 읽기 
 
 ### 7월 15일 (금)
-- [ ] 티타임 작업 
-    - [ ]  코드 리뷰
-    - [ ]  ControllerAdvice 작업
-    - [ ]  다음 할 것 정하기 및 페어 배정
-    - [ ]  배포 도전
+- [x] 티타임 작업 
+    - [x]  코드 리뷰
+    - [x]  ControllerAdvice 작업
+    - [x]  다음 할 것 정하기 및 페어 배정
+    - [x]  배포 도전
