[잉] 7월 15일 계획 (#648)
* 잉 7월 15일 금요일 계획

* 2207015 잉 일정 완료

--- a/잉/7월11일~7월17일.md
+++ b/잉/7월11일~7월17일.md
@@ -19,3 +19,10 @@
 - [x] 티타임 개발
 - [x] JPA 8장 읽기 
 - [x] CI/CD 테코블 읽기 
+
+### 7월 15일 (금)
+- [x] 티타임 작업 
+    - [x]  코드 리뷰
+    - [x]  ControllerAdvice 작업
+    - [x]  다음 할 것 정하기 및 페어 배정
+    - [x]  배포 도전
