[아서] 7월 15일 완료

--- a/아서/7월11일~7월17일.md
+++ b/아서/7월11일~7월17일.md
@@ -23,7 +23,7 @@
 - [x] 로그인 인가 기능 구현
 
 ## 7월 15일
-- [ ] CI / CD 시작
-- [ ] 1차 데모
-- [ ] 행복회로 진행
-- [ ] 회식?
+- [x] CI / CD 시작
+- [x] 1차 데모
+- [x] 행복회로 진행
+- [x] 회식?
