[파랑] 7월15일 계획 (#649)
* [파랑] 7월15일 계획

* [파랑] 7월15일 계획완료

--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -29,3 +29,13 @@
 - [x] JPA auditing 적용
 - [x] JPA 스터디
 - [x] 21시 필라테스
+
+### 7월 15일 (금)
+- [x] 알록달록 미니 세미나 준비
+  - [x] JPA Slice & Page
+  - [x] JPA auditing
+- [x] auditing 구현 수정
+- [x] 알록달록 찐한 회고
+- [x] 뀨키즈 회식
+---
+오늘 오랜만에 뀨키즈 회식 달렸다. 생각보다 너무 신나게 놀았다.. 막차타고 집에 가는데 아쉬웠다. 바쁘고 캠퍼스 찢어져서 자주 못보는 게 아쉬워~
