220716 앨버 계획 완료

--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -36,8 +36,8 @@
 
 ## 7월 15일
 
-- [ ] 프로젝트 회고 회의
-- [ ] 그룹 기능 일부 구현..
-- [ ] 인증 기능 공부
-- [ ] 이슈등록
-- [ ] 근로 글 가져오기 기능 조사
+- [x] 프로젝트 회고 회의
+- [x] 그룹 기능 일부 구현..
+- [x] 인증 기능 공부
+- [x] 이슈등록
+- [x] 근로 글 가져오기 기능 조사
