feat: 코린 7월15일 계획 완료

--- a/코린/7월11일-7월17일.md
+++ b/코린/7월11일-7월17일.md
@@ -21,6 +21,6 @@
 
 ## 7월14일
 
-- [ ] Jenkins PR build
-- [ ] 오늘의 개발일지 작성
-- [ ] 어제 개발일지 재점검, 추가공부
+- [x] Jenkins PR build
+- [x] 오늘의 개발일지 작성
+- [x] 어제 개발일지 재점검, 추가공부
