[코린] 7월15일 계획 (#645)
* feat: 코린 7월15일 계획

* feat: 코린 7월15일 계획 완료

--- a/코린/7월11일-7월17일.md
+++ b/코린/7월11일-7월17일.md
@@ -18,3 +18,9 @@
 - [x] jenkins server 가상 메모리 땡기기
 - [x] jenkins server에서 project build 성공시키기
 - [x] 오늘의 개발일지 작성
+
+## 7월14일
+
+- [x] Jenkins PR build
+- [x] 오늘의 개발일지 작성
+- [x] 어제 개발일지 재점검, 추가공부
