--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -30,6 +30,6 @@
 
 # 7.15.
 
-- [ ] 인증/인가 flow 학습
-- [ ] OAuth 로그인 기능 구현
-- [ ] 로그인과 추가 입력 페이지를 연계
+- [x] 인증/인가 flow 학습
+- [x] OAuth 로그인 기능 구현
+- [x] 로그인과 추가 입력 페이지를 연계
