[파랑] 7월18일 계획추가

--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -1,5 +1,7 @@
 ### 7월 18일 (월)
-- [ ] 10시 필라테스
-- [ ] 알록달록 스프린트 회의
-- [ ] 15시 근로 회의
+- [x] 10시 필라테스
+- [x] 알록달록 스프린트 회의
+- [x] 15시 근로 회의
 - [ ] 코틀린 스터디 11장
+- [ ] 20시 30분 근로 페어
+- [ ] 22시 데플 회의
