--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -2,6 +2,6 @@
 - [x] 10시 필라테스
 - [x] 알록달록 스프린트 회의
 - [x] 15시 근로 회의
-- [ ] 코틀린 스터디 11장
-- [ ] 20시 30분 근로 페어
-- [ ] 22시 데플 회의
+- [x] 코틀린 스터디 11장
+- [x] 20시 30분 근로 페어
+- [x] 22시 데플 회의
