--- a/잉/7월18일~7월23일.md
+++ b/잉/7월18일~7월23일.md
@@ -1,5 +1,5 @@
 ### 7월 18일 (월)
-- [ ] CI/CD 구축1
-- [ ] 프롤로그 회의 
-- [ ] JPA책 8장 반 읽기 
-- [ ] Discussion 내용 정리
+- [x] CI/CD 구축1
+- [x] 프롤로그 회의 
+- [x] JPA책 8장 반 읽기 
+- [x] Discussion 내용 정리
