--- a/티거/7월18일-7월24일.md
+++ b/티거/7월18일-7월24일.md
@@ -3,8 +3,8 @@
 ## 7월 18일 (월)
 
 - [x] 11시 핍핍 스터디
-- [ ] 13시 30분 알록달록 스프린트 플래닝 회의
-- [ ] 카테고리 생성 기능 구현
-- [ ] 핍핍 스터디 업로드
-  - [ ] 질문
-  - [ ] 답변
+- [x] 13시 30분 알록달록 스프린트 플래닝 회의
+- [x] 카테고리 생성 기능 구현
+- [x] 핍핍 스터디 업로드
+  - [x] 질문
+  - [x] 답변
