--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -5,3 +5,10 @@
 - [x] 코틀린 스터디 11장
 - [x] 20시 30분 근로 페어
 - [x] 22시 데플 회의
+
+### 7월 19일 (화)
+- [ ] 슬라이싱 기능 리팩토링
+- [ ] 카테고리 기능 설계
+- [ ] 내가 생성한 카테고리 조회 기능 구현
+- [ ] 19시 근로 페어
+- [ ] 20시 근로 코틀린 스터디
