[아서] 7월 19일 계획

--- a/아서/7월18일~7월24일.md
+++ b/아서/7월18일~7월24일.md
@@ -5,3 +5,11 @@
 - [x] 스프린트 미팅
 - [x] 스프린트 백로그 토대로 일정 추리기
 - [x] 저녁 약속
+
+
+
+## 7월 19일
+
+- [ ] 루키의 CI / CD 적용기2 듣기
+- [ ] 데일리 미팅
+- [ ] 쿠폰 사용 요청 구현하기
