[티거] 7월 19일 계획

--- a/티거/7월18일-7월24일.md
+++ b/티거/7월18일-7월24일.md
@@ -8,3 +8,11 @@
 - [x] 핍핍 스터디 업로드
   - [x] 질문
   - [x] 답변
+
+## 7월 19일 (화)
+
+- [ ] 인가 처리
+  - [ ] 내비게이션 바
+  - [ ] 로그인 페이지
+  - [ ] 마이 페이지
+  - [ ] 달력 페이지
