--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -9,3 +9,12 @@
 - [x] 프로젝트 진행 (작업 가능 시간: 1330 ~ 15, 16~20, 2230~2, 약 7시간...)
   - 인증 기능 구현 마무리 필요 (스타일 보다는 기능 우선) <로그인 기능 오류 수정>
   - 그룹 기능 구현 마무리 필요 (스타일 보다는 기능 우선) <그룹 초대하기, 초대장 페이지 만들기, 초대링크복사, 그룹목록 사이드바추가>
+
+
+## 7월 19일
+
+- [ ] 1130 데일리 회식
+- [ ] 인증 기능 오류 해결
+- [ ] 초대 페이지 마저 만들기
+- [ ] 초대링크 복사 기능 구현
+- [ ] 그룹 목록 사이드바 구현
