--- a/민초/7월18일-7월22일.md
+++ b/민초/7월18일-7월22일.md
@@ -6,6 +6,6 @@
 
 # 7.19.
 
-- [ ] 리뷰 작성 기능 + 인증
-- [ ] 리뷰 삭제 기능 + refetch
-- [ ] 리뷰 수정 기능 + refetch
+- [x] 리뷰 작성 기능 + 인증
+- [x] 리뷰 삭제 기능 + refetch
+- [x] 리뷰 수정 기능 + refetch
