잉 7월 19일 계획

--- a/잉/7월18일~7월23일.md
+++ b/잉/7월18일~7월23일.md
@@ -3,3 +3,10 @@
 - [x] 프롤로그 회의 
 - [x] JPA책 8장 반 읽기 
 - [x] Discussion 내용 정리
+
+### 7월 19일 (화)
+- [x] CI/CD 구축 완료
+- [x] 프롤로그 티타임
+- [x] Discussion 내용 정리
+- [ ] JPA책 8장
+- [ ] JPA 3단계 미션 진행 
