--- a/아서/7월18일~7월24일.md
+++ b/아서/7월18일~7월24일.md
@@ -10,6 +10,6 @@
 
 ## 7월 19일
 
-- [ ] 루키의 CI / CD 적용기2 듣기
-- [ ] 데일리 미팅
-- [ ] 쿠폰 사용 요청 구현하기
+- [x] 루키의 CI / CD 적용기2 듣기
+- [x] 데일리 미팅
+- [x] 쿠폰 사용 요청 구현하기
