feat: 코린 7월20일 계획 완료

--- a/코린/7월18일-7월24일.md
+++ b/코린/7월18일-7월24일.md
@@ -10,7 +10,7 @@
 
 ## 7월18일
 
-- [ ] 개발 못다한 기능 구현
-- [ ] 개발 코드 리팩토링
-- [ ] 오늘의 개발일지 작성
-- [ ] 은재 편지 쓰기  
+- [x] 개발 못다한 기능 구현
+- [x] 개발 코드 리팩토링
+- [x] 오늘의 개발일지 작성
+- [x] 은재 편지 쓰기  
