--- a/코린/7월18일-7월24일.md
+++ b/코린/7월18일-7월24일.md
@@ -7,3 +7,10 @@
 - [x] 오늘의 개발일지 작성
 - [x] DB 서버 생성
 - [x] 저녁 약속~
+
+## 7월18일
+
+- [x] 개발 못다한 기능 구현
+- [x] 개발 코드 리팩토링
+- [x] 오늘의 개발일지 작성
+- [x] 은재 편지 쓰기  
