7월 19일 에덴 계획 완료

--- a/에덴/7월18일-7월24일.md
+++ b/에덴/7월18일-7월24일.md
@@ -7,7 +7,7 @@
 
 ## 7월 19일
 
-- [ ] 팀 회의
-- [ ] 페어 프로그래밍
-    - [ ] Restdocs 적용
-- [ ] 운동
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+    - [X] Restdocs 적용
+- [X] 운동
