--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -13,8 +13,8 @@
 
 ## 7월 19일
 
-- [ ] 1130 데일리 회식
-- [ ] 인증 기능 오류 해결
-- [ ] 초대 페이지 마저 만들기
-- [ ] 초대링크 복사 기능 구현
-- [ ] 그룹 목록 사이드바 구현
+- [x] 1130 데일리 회식
+- [x] 인증 기능 오류 해결
+- [x] 초대 페이지 마저 만들기
+- [x] 초대링크 복사 기능 구현
+- [x] 그룹 목록 사이드바 구현
