[오리] 7월 19일 계획 완료

--- a/오리/7월18일~7월24일.md
+++ b/오리/7월18일~7월24일.md
@@ -4,7 +4,7 @@
 - [x] 젠킨스 마무리
 
 ### 7월 19일(화)
-- [ ] 오전 젠킨스 공유
-- [ ] slack url 생성 api 페어
-- [ ] 오후 2시 브랜딩근로 인터뷰 촬영
-- [ ] 프론트 서버 올리기
+- [x] 오전 젠킨스 공유
+- [x] slack url 생성 api 페어
+- [x] 오후 2시 브랜딩근로 인터뷰 촬영
+- [x] 프론트 서버 올리기
