[티거] 7월 19일 완료

--- a/티거/7월18일-7월24일.md
+++ b/티거/7월18일-7월24일.md
@@ -11,8 +11,7 @@
 
 ## 7월 19일 (화)
 
-- [ ] 인가 처리
-  - [ ] 내비게이션 바
-  - [ ] 로그인 페이지
-  - [ ] 마이 페이지
-  - [ ] 달력 페이지
+- [x] 인가 처리
+  - [x] 로그인 페이지
+  - [x] 마이 페이지
+  - [x] 달력 페이지
