--- a/잉/7월18일~7월23일.md
+++ b/잉/7월18일~7월23일.md
@@ -10,3 +10,8 @@
 - [x] Discussion 내용 정리
 - [x] JPA책 8장
 - [x] JPA 3단계 미션 진행 
+
+### 7월 20일 (수)
+- [ ] 티타임 db 연결 시도
+- [ ] Discussion 내용 정리
+- [ ] JPA책 8장
