[오리] 7월 20일 계획

--- a/오리/7월18일~7월24일.md
+++ b/오리/7월18일~7월24일.md
@@ -8,3 +8,9 @@
 - [x] slack url 생성 api 페어
 - [x] 오후 2시 브랜딩근로 인터뷰 촬영
 - [x] 프론트 서버 올리기
+
+### 7월 20일(수)
+- [ ] 프론트 젠킨스 자동배포
+- [ ] cucumber
+- [ ] pr 리뷰
+- [ ] 저녁약속
