220720 앨버 계획 완료

--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -21,8 +21,8 @@
 
 ## 7월 20일
 
-- [ ] aws 해보자
-- [ ] kdt 출석 꼬박 챙기기
-- [ ] 데플..지각안하기
-- [ ] 투표, 그룹, 인증 기능 통합 후 오류 해결
-- [ ] ppt 제작
+- [x] aws 해보자
+- [x] kdt 출석 꼬박 챙기기
+- [x] 데플..지각안하기
+- [x] 투표, 그룹, 인증 기능 통합 후 오류 해결
+- [x] ppt 제작
