--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -18,3 +18,11 @@
 - [x] 초대 페이지 마저 만들기
 - [x] 초대링크 복사 기능 구현
 - [x] 그룹 목록 사이드바 구현
+
+## 7월 20일
+
+- [x] aws 해보자
+- [x] kdt 출석 꼬박 챙기기
+- [x] 데플..지각안하기
+- [x] 투표, 그룹, 인증 기능 통합 후 오류 해결
+- [x] ppt 제작
