--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -14,7 +14,7 @@
 - [x] 20시 근로 코틀린 스터디
 
 ### 7월 20일 (수)
-- [ ] 카테고리 기능 구현
-- [ ] 데모데이 준비
-- [ ] 배포 공부
-- [ ] 테코톡 준비
+- [x] 카테고리 기능 구현
+- [x] 데모데이 준비
+- [x] 배포 공부
+- [x] 테코톡 준비
