[파랑] 7월20일 계획 (#672)
* [파랑] 7월20일 계획

* [파랑] 7월20일 계획완료

--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -12,3 +12,9 @@
 - [x] 내가 생성한 카테고리 조회 기능 구현
 - [x] 19시 근로 페어
 - [x] 20시 근로 코틀린 스터디
+
+### 7월 20일 (수)
+- [x] 카테고리 기능 구현
+- [x] 데모데이 준비
+- [x] 배포 공부
+- [x] 테코톡 준비
