--- a/아서/7월18일~7월24일.md
+++ b/아서/7월18일~7월24일.md
@@ -18,7 +18,7 @@
 
 ## 7월 20일
 
-- [ ] 쿠폰 사용 요청 취소 기능 구현하기
-- [ ] CI / CD 실험해보기
-- [ ] 데일리 미팅
-- [ ] 데모데이 프론트 / 백 맞춰보기
+- [x] 쿠폰 사용 요청 취소 기능 구현하기
+- [x] CI / CD 실험해보기
+- [x] 데일리 미팅
+- [x] 데모데이 프론트 / 백 맞춰보기
