--- a/아서/7월18일~7월24일.md
+++ b/아서/7월18일~7월24일.md
@@ -13,3 +13,12 @@
 - [x] 루키의 CI / CD 적용기2 듣기
 - [x] 데일리 미팅
 - [x] 쿠폰 사용 요청 구현하기
+
+
+
+## 7월 20일
+
+- [x] 쿠폰 사용 요청 취소 기능 구현하기
+- [x] CI / CD 실험해보기
+- [x] 데일리 미팅
+- [x] 데모데이 프론트 / 백 맞춰보기
