[오리] 7월 21일 계획

--- a/오리/7월18일~7월24일.md
+++ b/오리/7월18일~7월24일.md
@@ -10,7 +10,13 @@
 - [x] 프론트 서버 올리기
 
 ### 7월 20일(수)
-- [ ] 프론트 젠킨스 자동배포
-- [ ] cucumber
+- [x] 프론트 젠킨스 자동배포
+- [x] cucumber
+- [x] pr 리뷰
+- [x] 저녁약속
+
+### 7월 21일(목)
 - [ ] pr 리뷰
-- [ ] 저녁약속
+- [ ] 스프린트2 남은 이슈 쳐내기
+- [ ] 데모데이 준비
+- [ ] 쉼
