--- a/잉/7월18일~7월23일.md
+++ b/잉/7월18일~7월23일.md
@@ -17,6 +17,6 @@
 - [x] JPA책 8장
 
 ### 7월 21일 (목)
-- [ ] 발표 준비
-- [ ] Discussion 내용 정리
-- [ ] JPA책 8장
+- [x] 발표 준비
+- [x] Discussion 내용 정리
+- [x] JPA책 8장
