--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -29,8 +29,8 @@
 
 ## 7월 21일
 
-- [ ] 투표 기능 api 변경에 따라 변경
-- [ ] ppt 내용 보고 피드백해주기
-- [ ] 데모 플로우 검사하기
+- [x] 투표 기능 api 변경에 따라 변경
+- [x] ppt 내용 보고 피드백해주기
+- [x] 데모 플로우 검사하기
 
 
