[앨버] 7월 21일 계획 (#683)
* 220721 앨버 계획

* 220721 앨버 계획 완료

--- a/앨버/7월18일 ~ 7월22일.md
+++ b/앨버/7월18일 ~ 7월22일.md
@@ -26,3 +26,11 @@
 - [x] 데플..지각안하기
 - [x] 투표, 그룹, 인증 기능 통합 후 오류 해결
 - [x] ppt 제작
+
+## 7월 21일
+
+- [x] 투표 기능 api 변경에 따라 변경
+- [x] ppt 내용 보고 피드백해주기
+- [x] 데모 플로우 검사하기
+
+
