[파랑] 7월21일 계획완료

--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -20,6 +20,6 @@
 - [x] 테코톡 준비
 
 ### 7월 21일 (목)
-- [ ] 카테고리 수정 및 삭제 기능 구현
-- [ ] 배포 공부
-- [ ] 테코톡 준비
+- [x] 카테고리 수정 및 삭제 기능 구현
+- [x] 배포 공부
+- [x] 테코톡 준비
