[코린] 7월21일 계획 (#687)
* feat: 날짜 기입 수정

* feat: 코린 21일 계획 완료

--- a/코린/7월18일-7월24일.md
+++ b/코린/7월18일-7월24일.md
@@ -8,15 +8,20 @@
 - [x] DB 서버 생성
 - [x] 저녁 약속~
 
-## 7월18일
+## 7월19일
 
 - [x] 개발 못다한 기능 구현
 - [x] 개발 코드 리팩토링
 - [x] 오늘의 개발일지 작성
 - [x] 은재 편지 쓰기  
 
-## 7월19일
+## 7월20일
 
 - [x] 발표준비
 - [x] 코드 리뷰
 - [x] 배포 터지는거 해결
+
+## 7월21일
+
+- [x] 발표준비
+- [x] 오늘의 개발일지 작성
