[아서] 7월 22일 계획

--- a/아서/7월18일~7월24일.md
+++ b/아서/7월18일~7월24일.md
@@ -24,8 +24,18 @@
 - [x] 데모데이 프론트 / 백 맞춰보기
 
 
+
+
 ## 7월 21일
 
 - [x] 테스트 코드 리팩터링
 - [x] 데모데이 시연
+
+
+
+## 7월 22일
+
+- [ ] 데모데이!
+- [ ] 행복회로!
+- [ ] 회식!
 
