[오리] 7월 22일 계획

--- a/오리/7월18일~7월24일.md
+++ b/오리/7월18일~7월24일.md
@@ -16,7 +16,11 @@
 - [x] 저녁약속
 
 ### 7월 21일(목)
-- [ ] pr 리뷰
-- [ ] 스프린트2 남은 이슈 쳐내기
-- [ ] 데모데이 준비
-- [ ] 쉼
+- [x] pr 리뷰
+- [x] 스프린트2 남은 이슈 쳐내기
+- [x] 데모데이 준비
+- [x] 쉼
+
+### 7월 22일(금)
+- [ ] 데모데이
+- [ ] 집청소
