[파랑] 7월22일 계획완료

--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -25,7 +25,7 @@
 - [x] 테코톡 준비
 
 ### 7월 22일 (금)
-- [ ] 테스트 관련 트러블 슈팅 정리
-- [ ] 2차 데모데이
-- [ ] 찐한 회고
-- [ ] 찐한 회식🌈
+- [x] 테스트 관련 트러블 슈팅 정리
+- [x] 2차 데모데이
+- [x] 찐한 회고
+- [x] 찐한 회식🌈
