--- a/파랑/7월18일~7월24일.md
+++ b/파랑/7월18일~7월24일.md
@@ -23,3 +23,9 @@
 - [x] 카테고리 수정 및 삭제 기능 구현
 - [x] 배포 공부
 - [x] 테코톡 준비
+
+### 7월 22일 (금)
+- [x] 테스트 관련 트러블 슈팅 정리
+- [x] 2차 데모데이
+- [x] 찐한 회고
+- [x] 찐한 회식🌈
