[아서] 7월 25일 완료

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -1,6 +1,6 @@
 ## 7월 25일
 
-- [ ] 스프린트 회의
-- [ ] 백엔드 자바 스타일 맞추기
-- [ ] 테스트 코드 관련 리팩터링
-- [ ] 백엔드 기술 스택 회의
+- [x] 스프린트 회의
+- [x] 백엔드 자바 스타일 맞추기
+- [x] 테스트 코드 관련 리팩터링
+- [x] 백엔드 기술 스택 회의
