[티거] 7월 25일 완료

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -2,5 +2,8 @@
 
 ## 7월 25일 (월)
 
-- [ ] 13시 30분 알록달록 스프린트 회의
-- [ ] 코드 리팩토링 with 9️⃣
+- [x] 13시 30분 알록달록 스프린트 회의
+- [x] 코드 리팩토링 with 9️⃣
+  - [x] 내비게이션 바
+  - [x] 사이드 바
+  - [x] 페이지 레이아웃
