[오리] 7월 26일 계획 완료

--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -1,5 +1,5 @@
 ### 7월 25일(월)
-- [ ] 스프린트 3 진행사항 정리
-- [ ] 일정 산출 후 해당 사항 일 시작
-- [ ] 영상근로 주간회의
-- [ ] 개인공부
+- [x] 스프린트 3 진행사항 정리
+- [x] 일정 산출 후 해당 사항 일 시작
+- [x] 영상근로 주간회의
+- [x] 개인공부
