--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -1,5 +1,5 @@
 ### 7월 25일 (월)
-- [ ] 티타임 3차 스프린트 회의
-- [ ] 프롤로그 1차 회의 
-- [ ] 프롤로그 2차 회의
-- [ ] 저녁약속
+- [x] 티타임 3차 스프린트 회의
+- [x] 프롤로그 1차 회의 
+- [x] 프롤로그 2차 회의
+- [x] 저녁약속
