[티거] 7월 26일 계획

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -7,3 +7,12 @@
   - [x] 내비게이션 바
   - [x] 사이드 바
   - [x] 페이지 레이아웃
+
+## 7월 26일 (화)
+
+- [ ] 10시 30분 강의 < 레벨 3 글쓰기 >
+- [ ] 코드 리팩토링 with 9️⃣
+  - [ ] 달력 컴포넌트
+  - [ ] 카테고리 컴포넌트
+  - [ ] 모달 컴포넌트
+- [ ] 저녁 약속
