--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -4,3 +4,11 @@
 - [x] 백엔드 자바 스타일 맞추기
 - [x] 테스트 코드 관련 리팩터링
 - [x] 백엔드 기술 스택 회의
+
+
+
+## 7월 26일
+
+- [x] 데일리 미팅
+- [x] UI 관련 회의
+- [x] 백엔드 쿠폰 히스토리 회의
