[티거] 7월 26일 완료

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -10,9 +10,9 @@
 
 ## 7월 26일 (화)
 
-- [ ] 10시 30분 강의 < 레벨 3 글쓰기 >
-- [ ] 코드 리팩토링 with 9️⃣
-  - [ ] 달력 컴포넌트
-  - [ ] 카테고리 컴포넌트
-  - [ ] 모달 컴포넌트
-- [ ] 저녁 약속
+- [x] 10시 30분 강의 < 레벨 3 글쓰기 >
+- [x] 코드 리팩토링 with 9️⃣
+  - [x] 달력 컴포넌트
+  - [x] 카테고리 컴포넌트
+  - [x] 모달 컴포넌트
+- [x] 저녁 약속
