7월 26일 에덴 계획 완료

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -7,8 +7,8 @@
 
 ## 7월 26일
 
-- [ ] 팀 회의
-- [ ] 페어 프로그래밍
-  - [ ] 일정 기능 하기
-  - [ ] 투표 리팩토링
-- [ ] 운동
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 일정 기능 하기
+  - [x] 투표 리팩토링
+- [x] 운동
