[에덴] 7월 26일 계획 (#715)
* 7월 26일 에덴 계획

* 7월 26일 에덴 계획 완료

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -1,6 +1,14 @@
-## 7월 18일
+## 7월 25일
 
 - [x] 팀 회의
-- [z] 근로 회의(3-4시, 8-9시)
+- [x] 근로 회의(3-4시, 8-9시)
 - [x] 페어 프로그래밍
+- [x] 운동
+
+## 7월 26일
+
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 일정 기능 하기
+  - [x] 투표 리팩토링
 - [x] 운동
