220726 앨버 계획 완료

--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -7,9 +7,9 @@
 
 ## 7월 26일
 
-- [ ] 프로젝트 리팩토링
-- [ ] 개인 공부 (react, typescript) 9시부터
-- [ ] 3차 스프린트 회의
-- [ ] 근로 설문 작성
-- [ ] 근로 회의록 작성 후 쓰레드에 올리기
-- [ ] 조금 먹기..
+- [x] 프로젝트 리팩토링
+- [x] 개인 공부 (react, typescript) 9시부터
+- [x] 3차 스프린트 회의
+- [x] 근로 설문 작성
+- [x] 근로 회의록 작성 후 쓰레드에 올리기
+- [x] 조금 먹기..
