--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -3,3 +3,13 @@
 - [x] 프로젝트 리팩토링
 - [x] 스프린트3 팀회의
 - [x] 근로 회의 (3시, 8시)
+
+
+## 7월 26일
+
+- [x] 프로젝트 리팩토링
+- [x] 개인 공부 (react, typescript) 9시부터
+- [x] 3차 스프린트 회의
+- [x] 근로 설문 작성
+- [x] 근로 회의록 작성 후 쓰레드에 올리기
+- [x] 조금 먹기..
