--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -13,3 +13,13 @@
 - [x] 근로 설문 작성
 - [x] 근로 회의록 작성 후 쓰레드에 올리기
 - [x] 조금 먹기..
+
+
+## 7월 27일
+
+- [ ] 개인 공부 (8:30 ~ 10:00)
+- [ ] 프로젝트 리팩토링 (10:00 ~ 12:00)
+- [ ] 근로 설문 검토 및 올리기
+- [ ] 서브웨이와 훅트포케로 체중 조절하기
+- [ ] 분업 회의 및 프로젝트 진행 (13:00 ~ 21:00)
+- [ ] 공부 (21:00 ~23:00)
