--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -5,7 +5,7 @@
 - [x] 저녁약속
 
 ### 7월 26일 (화)
-- [ ] 프백 페어프로그래밍
-- [ ] 프롤로그 개발
-- [ ] 백엔드 도메인 회의 
-- [ ] JPA 책 읽기
+- [x] 프백 페어프로그래밍
+- [x] 프롤로그 개발
+- [x] 백엔드 도메인 회의 
+- [x] JPA 책 읽기
