[잉] 7월 26일 계획 (#712)
* 계획

* 완료

--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -3,3 +3,9 @@
 - [x] 프롤로그 1차 회의 
 - [x] 프롤로그 2차 회의
 - [x] 저녁약속
+
+### 7월 26일 (화)
+- [x] 프백 페어프로그래밍
+- [x] 프롤로그 개발
+- [x] 백엔드 도메인 회의 
+- [x] JPA 책 읽기
