[오리] 7월 27일 계획 완료

--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -5,7 +5,7 @@
 - [x] 개인공부
 
 ### 7월 26일(화)
-- [ ] 오전 글쓰기 강의
-- [ ] 수정하기 기능 리뷰받고 머지하기
-- [ ] 테스트 가독성 리팩터링
-- [ ] cucumber 설정
+- [x] 오전 글쓰기 강의
+- [x] 수정하기 기능 리뷰받고 머지하기
+- [x] 테스트 가독성 리팩터링
+- [x] cucumber 설정
