[오리] 7월 26일 계획 (#713)
* [오리] 7월 26일 계획

* [오리] 7월 27일 계획 완료

--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -3,3 +3,9 @@
 - [x] 일정 산출 후 해당 사항 일 시작
 - [x] 영상근로 주간회의
 - [x] 개인공부
+
+### 7월 26일(화)
+- [x] 오전 글쓰기 강의
+- [x] 수정하기 기능 리뷰받고 머지하기
+- [x] 테스트 가독성 리팩터링
+- [x] cucumber 설정
