--- a/코린/7월25일-7월31일.md
+++ b/코린/7월25일-7월31일.md
@@ -6,7 +6,7 @@
 
 ## 7월26일
 
-- [ ] 팀회의
-- [ ] 글쓰기 강의
-- [ ] (페어) 사용자 키워드 검색 기능 구현
-- [ ] jpa 복기
+- [x] 팀회의
+- [x] 글쓰기 강의
+- [x] (페어) 사용자 키워드 검색 기능 구현
+- [x] jpa 복기
