[민초] 7월 27일 계획

--- a/민초/7월25일-7월29일.md
+++ b/민초/7월25일-7월29일.md
@@ -6,6 +6,16 @@
 
 # 7.26.
 
+- [x] 팀 데일리 미팅
+- [x] 프론트 개발 작업
+- [x] 팀 데일리 회고
+
+# 7.27
+
 - [ ] 팀 데일리 미팅
-- [ ] 프론트 개발 작업
+- [ ] 검색화면 프로필 카드 컴포넌트 만들기
+- [ ] 검색바 컴포넌트 만들기
+- [ ] 검색 필터 컴포넌트 만들기
+- [ ] 찜하기 컴포넌트 만들기
+- [ ] 유저 통계 컴포넌트 만들기
 - [ ] 팀 데일리 회고
