--- a/파랑/7월25일~7월31일.md
+++ b/파랑/7월25일~7월31일.md
@@ -6,8 +6,8 @@
 - [x] 테코톡 PPT 준비
 
 ### 7월 26일 (화)
-- [ ] 달록 페어
-- [ ] 15시 30분 네오 면담
-- [ ] 19시 근로 페어
-- [ ] 21시 필라테스 PT
-- [ ] 테코톡 PPT 준비
+- [x] 달록 페어
+- [x] 15시 30분 네오 면담
+- [x] 19시 근로 페어
+- [x] 21시 필라테스 PT
+- [x] 테코톡 PPT 준비
