7월 27일 에덴 계획

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -12,3 +12,11 @@
   - [x] 일정 기능 하기
   - [x] 투표 리팩토링
 - [x] 운동
+
+## 7월 27일
+
+- [ ] 팀 회의
+- [ ] 페어 프로그래밍
+  - [ ] 기능 개발 OR 리팩토링
+- [ ] 근로 챕터 회의
+- [ ] 운동
