[오리] 7월 27일 계획

--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -9,3 +9,8 @@
 - [x] 수정하기 기능 리뷰받고 머지하기
 - [x] 테스트 가독성 리팩터링
 - [x] cucumber 설정
+
+### 7월 27일(수)
+- [ ] 테스트 가독성 관련 리팩터링
+- [ ] 이슈 남은 것들 해결
+- [ ] 로깅 공부
