[아서] 7월 27일 계획

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -12,3 +12,12 @@
 - [x] 데일리 미팅
 - [x] UI 관련 회의
 - [x] 백엔드 쿠폰 히스토리 회의
+
+
+
+## 7월 27일
+
+- [ ] 쿠폰 도메인 회의
+  - [ ] 쿠폰 사용 신청 시 추가되는 달력과 메세지
+- [ ] 테스트 코드 리팩터링 PR
+- [ ] 저녁 약속
