[티거] 7월 27일 계획

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -16,3 +16,12 @@
   - [x] 카테고리 컴포넌트
   - [x] 모달 컴포넌트
 - [x] 저녁 약속
+
+## 7월 27일 (수)
+
+- [ ] 코드 리팩토링 with 9️⃣
+  - [ ] 카테고리 컴포넌트
+- [ ] 나의 카테고리 기능 구현
+  - [ ] 생성
+  - [ ] 수정
+  - [ ] 삭제
