[아서] 7월 27일 완료

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -17,7 +17,7 @@
 
 ## 7월 27일
 
-- [ ] 쿠폰 도메인 회의
-  - [ ] 쿠폰 사용 신청 시 추가되는 달력과 메세지
-- [ ] 테스트 코드 리팩터링 PR
-- [ ] 저녁 약속
+- [x] 쿠폰 도메인 회의
+  - [x] 쿠폰 사용 신청 시 추가되는 달력과 메세지
+- [x] 테스트 코드 리팩터링 PR
+- [x] 저녁 약속
