--- a/파랑/7월25일~7월31일.md
+++ b/파랑/7월25일~7월31일.md
@@ -11,3 +11,9 @@
 - [x] 19시 근로 페어
 - [x] 21시 필라테스 PT
 - [x] 테코톡 PPT 준비
+
+### 7월 27일 (수)
+- [x] 달록 페어
+- [x] 11시 근로 페어
+- [x] 20시 필라테스
+- [x] 테코톡 PPT 준비
