7월 27일 에덴 계획 완료

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -15,8 +15,8 @@
 
 ## 7월 27일
 
-- [ ] 팀 회의
-- [ ] 페어 프로그래밍
-  - [ ] 기능 개발 OR 리팩토링
-- [ ] 근로 챕터 회의
-- [ ] 운동
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 기능 개발 OR 리팩토링
+- [x] 근로 챕터 회의
+- [x] 운동
