--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -11,6 +11,6 @@
 - [x] JPA 책 읽기
 
 ### 7월 27일 (수)
-- [ ] 티타임 승인 기능 일부 개발
-- [ ] 프롤로그 delete test+prod 개발
-- [ ] JPA 9장 읽기
+- [x] 티타임 승인 기능 일부 개발
+- [x] 프롤로그 delete test+prod 개발
+- [x] JPA 9장 읽기
