--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -9,3 +9,8 @@
 - [x] 프롤로그 개발
 - [x] 백엔드 도메인 회의 
 - [x] JPA 책 읽기
+
+### 7월 27일 (수)
+- [x] 티타임 승인 기능 일부 개발
+- [x] 프롤로그 delete test+prod 개발
+- [x] JPA 9장 읽기
