--- a/코린/7월25일-7월31일.md
+++ b/코린/7월25일-7월31일.md
@@ -13,5 +13,10 @@
 
 ## 7월27일
 
-- [ ] (페어) 사용자 키워드 검색 기능 구현
-- [ ] 오늘의 개발일지 작성
+- [x] (페어) 사용자 키워드 검색 기능 구현
+- [x] 오늘의 개발일지 작성
+
+## 7월28일
+- [ ] 제품 통계 기능 구현 시도
+- [ ] 개발일지 보충
+- [ ] querydsl 공부 
