--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -11,6 +11,11 @@
 - [x] cucumber 설정
 
 ### 7월 27일(수)
-- [ ] 테스트 가독성 관련 리팩터링
-- [ ] 이슈 남은 것들 해결
+- [x] 테스트 가독성 관련 리팩터링
+- [x] 이슈 남은 것들 해결
+- [x] 로깅 공부
+
+### 7월 28일(목)
+- [ ] 리뷰 남은거 마저 리뷰하고 머지
+- [ ] 테코톡 진행
 - [ ] 로깅 공부
