--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -23,3 +23,12 @@
 - [x] 서브웨이와 훅트포케로 체중 조절하기
 - [x] 분업 회의 및 프로젝트 진행 (13:00 ~ 21:00)
 - [x] 공부 (21:00 ~23:00)
+
+## 7월 28일
+
+- [ ] 개인 공부 (~10:00)
+- [ ] 프로젝트 진행 (10:00 ~ 21:00)
+- 생성 페이지 UI 만들기
+- 결과 페이지 UI 만들기
+- 드래그 공부해서 적용하기
+- [ ] 개인 공부 (21:00 ~ 23:00)
