--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -20,3 +20,11 @@
   - [x] 기능 개발 OR 리팩토링
 - [x] 근로 챕터 회의
 - [x] 운동
+
+## 7월 27일
+
+- [ ] 팀 회의
+- [ ] 페어 프로그래밍
+  - [ ] 기능 개발
+- [ ] 테코톡 구경
+- [ ] 운동
