--- a/민초/7월25일-7월29일.md
+++ b/민초/7월25일-7월29일.md
@@ -12,10 +12,10 @@
 
 # 7.27
 
-- [ ] 팀 데일리 미팅
-- [ ] 검색화면 프로필 카드 컴포넌트 만들기
-- [ ] 검색바 컴포넌트 만들기
-- [ ] 검색 필터 컴포넌트 만들기
-- [ ] 찜하기 컴포넌트 만들기
-- [ ] 유저 통계 컴포넌트 만들기
-- [ ] 팀 데일리 회고
+- [x] 팀 데일리 미팅
+- [x] 검색화면 프로필 카드 컴포넌트 만들기
+- [x] 검색바 컴포넌트 만들기
+- [x] 검색 필터 컴포넌트 만들기
+- [x] 찜하기 컴포넌트 만들기
+- [x] 유저 통계 컴포넌트 만들기
+- [x] 팀 데일리 회고
