[아서] 7월 28일 계획 (#726)
* [아서] 7월 28일 계획

* [아서] 7월 28일 완료

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -21,3 +21,10 @@
   - [x] 쿠폰 사용 신청 시 추가되는 달력과 메세지
 - [x] 테스트 코드 리팩터링 PR
 - [x] 저녁 약속
+
+
+
+## 7월 28일
+- [x] 쿠폰 사용 요청시 날짜를 받는 기능 구현
+- [x] 쿠폰 사용에 메세지를 넣을 것인지 회의
+- [x] 쿠폰 테이블 설계 회의
