--- a/파랑/7월25일~7월31일.md
+++ b/파랑/7월25일~7월31일.md
@@ -19,6 +19,6 @@
 - [x] 테코톡 PPT 준비
 
 ### 7월 28일 (목)
-- [ ] 달록 ControllerTest 마무리
-- [ ] 15시 지원플랫폼 2.1.0 배포 및 회고
-- [ ] 테코톡 PPT 준비
+- [x] 달록 ControllerTest 마무리
+- [x] 15시 지원플랫폼 2.1.0 배포 및 회고
+- [x] 테코톡 PPT 준비
