--- a/민초/7월25일-7월29일.md
+++ b/민초/7월25일-7월29일.md
@@ -19,3 +19,9 @@
 - [x] 찜하기 컴포넌트 만들기
 - [x] 유저 통계 컴포넌트 만들기
 - [x] 팀 데일리 회고
+
+# 7.28
+
+- [x] 검색화면 프로필 카드 컴포넌트 만들기
+- [x] 유저 통계 컴포넌트 만들기
+- [x] 팀 데일리 회고
