--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -23,8 +23,8 @@
 
 ## 7월 27일
 
-- [ ] 팀 회의
-- [ ] 페어 프로그래밍
-  - [ ] 기능 개발
-- [ ] 테코톡 구경
-- [ ] 운동
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 기능 개발
+- [x] 테코톡 구경
+- [x] 운동
