--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -20,3 +20,11 @@
   - [x] 기능 개발 OR 리팩토링
 - [x] 근로 챕터 회의
 - [x] 운동
+
+## 7월 27일
+
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 기능 개발
+- [x] 테코톡 구경
+- [x] 운동
