220729 앨버 계획완료

--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -26,9 +26,9 @@
 
 ## 7월 28일
 
-- [ ] 개인 공부 (~10:00)
-- [ ] 프로젝트 진행 (10:00 ~ 21:00)
+- [x] 개인 공부 (~10:00)
+- [x] 프로젝트 진행 (10:00 ~ 21:00)
 - 생성 페이지 UI 만들기
 - 결과 페이지 UI 만들기
 - 드래그 공부해서 적용하기
-- [ ] 개인 공부 (21:00 ~ 23:00)
+- [x] 개인 공부 (21:00 ~ 23:00)
