--- a/코린/7월25일-7월31일.md
+++ b/코린/7월25일-7월31일.md
@@ -17,6 +17,6 @@
 - [x] 오늘의 개발일지 작성
 
 ## 7월28일
-- [ ] 제품 통계 기능 구현 시도
-- [ ] 개발일지 보충
-- [ ] querydsl 공부 
+- [x] 제품 통계 기능 구현 시도
+- [x] 개발일지 보충
+- [x] querydsl 공부 
