--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -16,6 +16,6 @@
 - [x] JPA 9장 읽기
 
 ### 7월 28일 (목)
-- [ ] 티타임 승인 기능 또 일부 개발
-- [ ] 티타임 아키랑 페어로 삽질 리턴즈
-- [ ] JPA 9장 마저 읽기
+- [x] 티타임 승인 기능 또 일부 개발
+- [x] 티타임 아키랑 페어로 삽질 리턴즈
+- [x] JPA 9장 마저 읽기
