[티거] 7월 28일 계획 (#729)
justify-content나 align-items의 center...
스크롤과 함께라면 지옥이구나를 처음으로 깨달은 날이었다
흥미롭다 흥미로워

점심에 먹은 편의점 해장 파스타가 너무 맛없었다
요근래 먹은 음식 중에 최악이었다
저녁에 부대볶음 먹었는데 볶음면 사리가 맛있었다 츄릅

저녁 시간에 오랜만에 페어룸에서 개발했다
역시 페어룸은 최적의 장소다
모니터 + 개인 공간 = 극락
오늘도 효율이 너무 좋았다
시간 가는 줄 모르고 개발했다

집에 돌아와서도 매트랑 게더에서 모각코를 했다
소소하게 이야기하다가 개발하는 게 재밌었다

나도 글 잘 쓰고 싶다!
기술 블로그에 가득 올리고 싶은데 쉽지 않다

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -19,9 +19,13 @@
 
 ## 7월 27일 (수)
 
-- [ ] 코드 리팩토링 with 9️⃣
-  - [ ] 카테고리 컴포넌트
-- [ ] 나의 카테고리 기능 구현
-  - [ ] 생성
-  - [ ] 수정
-  - [ ] 삭제
+- [x] 코드 리팩토링 with 9️⃣
+  - [x] 카테고리 컴포넌트
+- [x] 나의 카테고리 기능 구현
+  - [x] 생성
+
+## 7월 28일 (목)
+
+- [x] 14시 테코톡
+- [x] 사이드 바 기능 구현
+- [x] 기술 블로그 굴 작성
