7월 29일 에덴 계획

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -21,10 +21,17 @@
 - [x] 근로 챕터 회의
 - [x] 운동
 
-## 7월 27일
+## 7월 28일
 
 - [x] 팀 회의
 - [x] 페어 프로그래밍
   - [x] 기능 개발
 - [x] 테코톡 구경
 - [x] 운동
+
+## 7월 29일
+
+- [ ] 팀 회의
+- [ ] 페어 프로그래밍
+  - [ ] 기능 개발 및 인프라 구성
+- [ ] 회식
