--- a/파랑/7월25일~7월31일.md
+++ b/파랑/7월25일~7월31일.md
@@ -22,3 +22,10 @@
 - [x] 달록 ControllerTest 마무리
 - [x] 15시 지원플랫폼 2.1.0 배포 및 회고
 - [x] 테코톡 PPT 준비
+
+### 7월 29일 (금)
+- [ ] 달록 이번주 태스크 마무리
+- [ ] 달록 미니 세미나
+- [ ] 스프린트 회고 및 계획
+- [ ] 테코톡 준비
+- [ ] 회식
