[아서] 7월 29일 계획

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -28,3 +28,10 @@
 - [x] 쿠폰 사용 요청시 날짜를 받는 기능 구현
 - [x] 쿠폰 사용에 메세지를 넣을 것인지 회의
 - [x] 쿠폰 테이블 설계 회의
+
+
+## 7월 29일
+- [ ] 로깅 관련 이것저것 해보기
+- [ ] 쿠폰 도메인 설계 설득시키기
+- [ ] 쿠폰 기획 관련 회의
+- [ ] 데플 회식~🥳
