[오리] 7월 29일 계획

--- a/오리/7월25일~7월31일.md
+++ b/오리/7월25일~7월31일.md
@@ -16,6 +16,12 @@
 - [x] 로깅 공부
 
 ### 7월 28일(목)
-- [ ] 리뷰 남은거 마저 리뷰하고 머지
-- [ ] 테코톡 진행
-- [ ] 로깅 공부
+- [x] 리뷰 남은거 마저 리뷰하고 머지
+- [x] 테코톡 진행
+- [x] 로깅 공부
+
+### 7월 29일(금)
+- [ ] 오전 스프린트 진행 회의
+- [ ] 로깅 처리하기
+- [ ] 모니터링팀 결과물 구경하기
+- [ ] 저녁먹기
