[티거] 7월 29일 계획

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -29,3 +29,10 @@
 - [x] 14시 테코톡
 - [x] 사이드 바 기능 구현
 - [x] 기술 블로그 굴 작성
+
+## 7월 29일 (금)
+
+- [ ] 14시 포수타
+- [ ] 15시 알록달록 세미나
+- [ ] 알록달록 회의
+- [ ] 알록달록 회고
