[아서] 7월 29일 완료

--- a/아서/7월25일~7월31일.md
+++ b/아서/7월25일~7월31일.md
@@ -31,7 +31,7 @@
 
 
 ## 7월 29일
-- [ ] 로깅 관련 이것저것 해보기
-- [ ] 쿠폰 도메인 설계 설득시키기
-- [ ] 쿠폰 기획 관련 회의
-- [ ] 데플 회식~🥳
+- [x] 로깅 관련 이것저것 해보기
+- [x] 쿠폰 도메인 설계 설득시키기
+- [x] 쿠폰 기획 관련 회의
+- [x] 데플 회식~🥳
