7월 29일 에덴 계획 완료

--- a/에덴/7월25일-7월31일.md
+++ b/에덴/7월25일-7월31일.md
@@ -31,7 +31,7 @@
 
 ## 7월 29일
 
-- [ ] 팀 회의
-- [ ] 페어 프로그래밍
-  - [ ] 기능 개발 및 인프라 구성
-- [ ] 회식
+- [x] 팀 회의
+- [x] 페어 프로그래밍
+  - [x] 기능 개발 및 인프라 구성
+- [x] 회식
