--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -21,7 +21,7 @@
 - [x] JPA 9장 마저 읽기
 
 ### 7월 29일 (금)
-- [ ] 내가 만든 api restdocs 예외 상황 적용 
-- [ ] CI/CD 문서화 정리
-- [ ] 로깅 공부   
-- [ ] dp회식 
+- [x] 내가 만든 api restdocs 예외 상황 적용 
+- [x] CI/CD 문서화 정리
+- [x] 로깅 공부   
+- [x] dp회식 
