--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -19,3 +19,9 @@
 - [x] 티타임 승인 기능 또 일부 개발
 - [x] 티타임 아키랑 페어로 삽질 리턴즈
 - [x] JPA 9장 마저 읽기
+
+### 7월 29일 (금)
+- [x] 내가 만든 api restdocs 예외 상황 적용 
+- [x] CI/CD 문서화 정리
+- [x] 로깅 공부   
+- [x] dp회식 
