--- a/민초/7월25일-7월29일.md
+++ b/민초/7월25일-7월29일.md
@@ -28,6 +28,6 @@
 
 # 7.29
 
-- [ ] 유저 통계 컴포넌트 만들기
-- [ ] 사용자 통계 기능, 찜하기 기능, 프로필 검색 기능 뼈대만 넣기
-- [ ] 이슈로 등록된 프론트엔드 코드 bug fix
+- [x] 유저 통계 컴포넌트 만들기
+- [x] 사용자 통계 기능, 찜하기 기능, 프로필 검색 기능 뼈대만 넣기
+- [x] 이슈로 등록된 프론트엔드 코드 bug fix
