220729 앨버 계획 완료

--- a/앨버/7월25일~7월29일.md
+++ b/앨버/7월25일~7월29일.md
@@ -35,7 +35,7 @@
 
 ## 7월 29일
 
-- [ ] 개인 공부 (09:00~10:00)
-- [ ] 프로젝트 진행 (10:00~14:00, 15:00 ~ 18:00)
-- [ ] 근로 회의 (글 가져오기 기능 방향성 논의 (14:00 ~ 15:00)
-- [ ] 회식
+- [x] 개인 공부 (09:00~10:00)
+- [x] 프로젝트 진행 (10:00~14:00, 15:00 ~ 18:00)
+- [x] 근로 회의 (글 가져오기 기능 방향성 논의 (14:00 ~ 15:00)
+- [x] 회식
