[티거] 7월 29일 완료

--- a/티거/7월25일-7월31일.md
+++ b/티거/7월25일-7월31일.md
@@ -32,7 +32,7 @@
 
 ## 7월 29일 (금)
 
-- [ ] 14시 포수타
-- [ ] 15시 알록달록 세미나
-- [ ] 알록달록 회의
-- [ ] 알록달록 회고
+- [x] 14시 포수타
+- [x] 15시 알록달록 세미나
+- [x] 알록달록 회의
+- [x] 알록달록 회고
