feat: 코린 계획 완료

--- a/코린/7월25일-7월31일.md
+++ b/코린/7월25일-7월31일.md
@@ -23,7 +23,7 @@
 
 
 ## 7월29일
-- [ ] 제품 통계 기능 리팩토링 및 PR
-- [ ] 에러코드 정의
-- [ ] querydsl 공부하면서 개발일지 작성
-- [ ] 지갑찾아 삼만리 
+- [x] 제품 통계 기능 리팩토링 및 PR
+- [x] 에러코드 정의
+- [x] querydsl 공부하면서 개발일지 작성
+- [x] 지갑찾아 삼만리 
