--- a/코린/7월25일-7월31일.md
+++ b/코린/7월25일-7월31일.md
@@ -20,3 +20,10 @@
 - [x] 제품 통계 기능 구현 시도
 - [x] 개발일지 보충
 - [x] querydsl 공부 
+
+
+## 7월29일
+- [x] 제품 통계 기능 리팩토링 및 PR
+- [x] 에러코드 정의
+- [x] querydsl 공부하면서 개발일지 작성
+- [x] 지갑찾아 삼만리 
