[파랑] 8월1일 계획완료

--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -1,5 +1,5 @@
 ### 8월 1일 (월)
-- [ ] 달록 스프린트 회의
-- [ ] 15시 근로 회의
-- [ ] 테코톡 준비
-- [ ] 데플 회의
+- [x] 달록 스프린트 회의
+- [x] 15시 근로 회의
+- [x] 테코톡 준비
+- [x] 데플 회의
