--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -27,7 +27,7 @@
 - [x] dp회식 
 
 ### 8월 1일 (월)
-- [ ] 프롤로그 회의.
-- [ ] git-hub action 테스트 자동화 적용 해보기.
-- [ ] 티타임 로깅 PR. 
-- [ ] inner, outer join 공부
+- [x] 프롤로그 회의.
+- [x] git-hub action 테스트 자동화 적용 해보기.
+- [x] 티타임 로깅 PR. 
+- [x] inner, outer join 공부
