--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -25,3 +25,9 @@
 - [x] CI/CD 문서화 정리
 - [x] 로깅 공부   
 - [x] dp회식 
+
+### 8월 1일 (월)
+- [x] 프롤로그 회의.
+- [x] git-hub action 테스트 자동화 적용 해보기.
+- [x] 티타임 로깅 PR. 
+- [x] inner, outer join 공부
