--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -3,8 +3,8 @@
 ## 8월 1일 (월)
 
 - [x] 11시 핍핍 스터디
-- [ ] 13시 30분 알록달록 스프린트 플래닝 회의
-- [ ] 카테고리 수정 기능 PR
-- [ ] 핍핍 스터디 업로드
+- [x] 13시 30분 알록달록 스프린트 플래닝 회의
+- [x] 카테고리 수정 기능 PR
+- [x] 핍핍 스터디 업로드
   - [x] 질문
-  - [ ] 답변
+  - [x] 답변
