--- a/에덴/8월1일-8월7일.md
+++ b/에덴/8월1일-8월7일.md
@@ -1,8 +1,8 @@
 ## 8월 1일
 
-- [ ] 팀 회의
-- [ ] 근로 회의(3-4시, 8-9시)
-- [ ] 페어 프로그래밍
-  - [ ] 인프라 구성
-- [ ] 데플 회의
-- [ ] 운동
+- [x] 팀 회의
+- [x] 근로 회의(3-4시, 8-9시)
+- [x] 페어 프로그래밍
+  - [x] 인프라 구성
+- [x] 데플 회의
+- [x] 운동
