[아서] 8월 2일 계획

--- a/아서/8월1일~8월7일.md
+++ b/아서/8월1일~8월7일.md
@@ -5,3 +5,10 @@
 - [x] 어디서 로그를 남겨야할지 회의
 - [x] 알고리즘 PR 리뷰
 - [x] 스프링 트랜잭션 AOP 공부하기
+
+
+## 8월 2일
+
+- [ ] 쿠폰 History 조회기능 PR 올리기
+- [ ] 로깅 PR 올리기
+- [ ] 백엔드 도메인 회의 참석하기
