--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -8,3 +8,13 @@
 - [x] 핍핍 스터디 업로드
   - [x] 질문
   - [x] 답변
+
+## 8월 2일 (화)
+
+- [ ] 카테고리 검색 기능 구현
+  - [ ] api request
+  - [ ] msw mocking
+- [ ] 일정 추가 모달 컴포넌트 수정
+  - [ ] 레이아웃 수정
+  - [ ] api request 수정
+  - [ ] msw mocking 수정
