[오리] 8월 2일 계획

--- a/오리/8월1일~8월7일.md
+++ b/오리/8월1일~8월7일.md
@@ -1,4 +1,10 @@
 ### 8월 1일(월)
-- [ ] 영상근로 주간회의
-- [ ] 밀린 이슈 쳐내기
+- [x] 영상근로 주간회의
+- [x] 밀린 이슈 쳐내기
+- [x] 네트워크 공부
+
+### 8월 2일(화)
+- [ ] 영상근로 자막 확인
+- [x] 오전 로깅 회의
+- [ ] 릴리즈 전 운영환경 세팅
 - [ ] 네트워크 공부
