--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -33,6 +33,6 @@
 - [x] inner, outer join 공부
 
 ### 8월 2일 (화)
-- [ ] 테스트 자동화 문제 해결
-- [ ] inner, outer join 공부 컨티뉴
-- [ ] 티타임 코치 승인 추가 기능 구현
+- [x] 테스트 자동화 문제 해결
+- [x] inner, outer join 공부 컨티뉴
+- [x] 티타임 코치 승인 추가 기능 구현
