[잉] 8월 2일 계획 (#752)
* 계획

* 완료

--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -31,3 +31,8 @@
 - [x] git-hub action 테스트 자동화 적용 해보기.
 - [x] 티타임 로깅 PR. 
 - [x] inner, outer join 공부
+
+### 8월 2일 (화)
+- [x] 테스트 자동화 문제 해결
+- [x] inner, outer join 공부 컨티뉴
+- [x] 티타임 코치 승인 추가 기능 구현
