--- a/민초/8월 1일-8월5일.md
+++ b/민초/8월 1일-8월5일.md
@@ -6,6 +6,6 @@
 
 # 8.2.
 
-- [ ] 프론트엔드 테스트 자동화
-- [ ] 백엔드, 프론트 페어 프로그래밍 - 테스트 코드 작성
-- [ ] 백엔드, 프론트 페어 프로그래밍 - 로깅
+- [x] 프론트엔드 테스트 자동화
+- [x] 백엔드, 프론트 페어 프로그래밍 - 테스트 코드 작성
+- [x] 백엔드, 프론트 페어 프로그래밍 - 로깅
