--- a/민초/8월 1일-8월5일.md
+++ b/민초/8월 1일-8월5일.md
@@ -1,5 +1,11 @@
 # 8.1.
 
-- [ ] 영상근로 회의
-- [ ] 프로필 검색 기능 구현
-- [ ] 위시리스트 기능 구현
+- [x] 영상근로 회의
+- [x] 프로필 검색 기능 구현
+- [x] 위시리스트 기능 구현
+
+# 8.2.
+
+- [x] 프론트엔드 테스트 자동화
+- [x] 백엔드, 프론트 페어 프로그래밍 - 테스트 코드 작성
+- [x] 백엔드, 프론트 페어 프로그래밍 - 로깅
