[아서] 8월 2일 완료

--- a/아서/8월1일~8월7일.md
+++ b/아서/8월1일~8월7일.md
@@ -9,6 +9,6 @@
 
 ## 8월 2일
 
-- [ ] 쿠폰 History 조회기능 PR 올리기
-- [ ] 로깅 PR 올리기
-- [ ] 백엔드 도메인 회의 참석하기
+- [x] 쿠폰 History 조회기능 PR 올리기
+- [x] 로깅 PR 올리기
+- [x] 백엔드 도메인 회의 참석하기
