--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -11,10 +11,8 @@
 
 ## 8월 2일 (화)
 
-- [ ] 카테고리 검색 기능 구현
-  - [ ] api request
-  - [ ] msw mocking
-- [ ] 일정 추가 모달 컴포넌트 수정
-  - [ ] 레이아웃 수정
-  - [ ] api request 수정
-  - [ ] msw mocking 수정
+- [x] 카테고리 검색 기능 구현
+  - [x] api request
+  - [x] msw mocking
+- [x] 일정 추가 모달 컴포넌트 수정
+  - [x] 레이아웃 수정
