[티거] 8월 2일 계획 (#758)
오랜만에 나인 준찌 밧드랑 번개로 놀았다
명가에서 삼겹살 먹고 강변으로 넘어갔다
오랜만에 좋았다~!

--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -8,3 +8,11 @@
 - [x] 핍핍 스터디 업로드
   - [x] 질문
   - [x] 답변
+
+## 8월 2일 (화)
+
+- [x] 카테고리 검색 기능 구현
+  - [x] api request
+  - [x] msw mocking
+- [x] 일정 추가 모달 컴포넌트 수정
+  - [x] 레이아웃 수정
