220802 앨버 계획 완료

--- a/앨버/8월1일~8월5일.md
+++ b/앨버/8월1일~8월5일.md
@@ -10,6 +10,6 @@
 
 # 8월 2일
 
-- [ ] 약속잡기 달력 연결
-- [ ] 근로 admin 완료 계획 세우기
-- [ ] 개인 공부 (21:00 ~ 23:00)
+- [x] 약속잡기 달력 연결
+- [x] 근로 admin 완료 계획 세우기
+- [x] 개인 공부 (21:00 ~ 23:00)
