[앨버] 8월 2일 계획 (#755)
* 220802 앨버 계획

* 220802 앨버 계획 완료

--- a/앨버/8월1일~8월5일.md
+++ b/앨버/8월1일~8월5일.md
@@ -6,3 +6,10 @@
 - [x] 근로 정기 회의 (15:00 ~ 16:00)
 - [x] 근로 챕터 회의 (20:00 ~ 21:00)
 - [x] 개인 공부(23:00 ~ 1:00)
+
+
+# 8월 2일
+
+- [x] 약속잡기 달력 연결
+- [x] 근로 admin 완료 계획 세우기
+- [x] 개인 공부 (21:00 ~ 23:00)
