--- a/아서/8월1일~8월7일.md
+++ b/아서/8월1일~8월7일.md
@@ -12,3 +12,11 @@
 - [x] 쿠폰 History 조회기능 PR 올리기
 - [x] 로깅 PR 올리기
 - [x] 백엔드 도메인 회의 참석하기
+
+
+## 8월 3일
+
+- [ ] 범준님 특강 참석하기
+- [ ] 로깅 관련 정리하기
+- [ ] 올라온 PR 리뷰
+- [ ] 저녁 약속
