8월 3일 에덴 계획

--- a/에덴/8월1일-8월7일.md
+++ b/에덴/8월1일-8월7일.md
@@ -13,3 +13,11 @@
 - [x] 페어 프로그래밍
   - [x] 약속잡기 리팩토링
 - [x] 운동
+
+## 8월 3일
+
+- [ ] kbj 특강
+- [ ] 페어 프로그래밍
+  - [ ] 약속잡기 리팩토링
+- [ ] 데모데이 준비
+- [ ] 운동
