[민초] 8월 3일 계획

--- a/민초/8월 1일-8월5일.md
+++ b/민초/8월 1일-8월5일.md
@@ -9,3 +9,8 @@
 - [x] 프론트엔드 테스트 자동화
 - [x] 백엔드, 프론트 페어 프로그래밍 - 테스트 코드 작성
 - [x] 백엔드, 프론트 페어 프로그래밍 - 로깅
+
+# 8.3.
+
+- [ ] 프로필 검색 기능 보완
+- [ ] 프로필 기능 보완
