--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -16,3 +16,10 @@
   - [x] msw mocking
 - [x] 일정 추가 모달 컴포넌트 수정
   - [x] 레이아웃 수정
+
+## 8월 3일 (수)
+
+- [ ] 10시 < 레벨3 특강 2 - 우아한형제들 CEO 김범준님 >
+- [ ] 일정 추가 모달 컴포넌트 스타일링
+- [ ] 일정 수정 모달 컴포넌트 구현
+- [ ] 일정 수정 기능 구현
