[오리] 8월 3일 계획

--- a/오리/8월1일~8월7일.md
+++ b/오리/8월1일~8월7일.md
@@ -4,7 +4,13 @@
 - [x] 네트워크 공부
 
 ### 8월 2일(화)
-- [ ] 영상근로 자막 확인
+- [x] 영상근로 자막 확인
 - [x] 오전 로깅 회의
-- [ ] 릴리즈 전 운영환경 세팅
-- [ ] 네트워크 공부
+- [x] 릴리즈 전 운영환경 세팅
+- [x] 네트워크 공부
+
+### 8월 3일(수)
+- [ ] 오전 특강
+- [ ] 플젝 qa
+- [ ] 이미지 업로드 테스트코드
+- [ ] 릴리즈환경 구축
