[아서] 8월 3일 완료

--- a/아서/8월1일~8월7일.md
+++ b/아서/8월1일~8월7일.md
@@ -16,7 +16,7 @@
 
 ## 8월 3일
 
-- [ ] 범준님 특강 참석하기
-- [ ] 로깅 관련 정리하기
-- [ ] 올라온 PR 리뷰
-- [ ] 저녁 약속
+- [x] 범준님 특강 참석하기
+- [x] 로깅 관련 정리하기
+- [x] 올라온 PR 리뷰
+- [x] 저녁 약속
