--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -10,7 +10,7 @@
 - [x] 테코톡 준비
 
 ### 8월 3일 (수)
-- [ ] 10시 특강
-- [ ] 점심 약속
-- [ ] 달록 인프라 설정 정리
-- [ ] 테코톡 준비
+- [x] 10시 특강
+- [x] 점심 약속
+- [x] 달록 인프라 설정 정리
+- [x] 테코톡 준비
