--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -14,3 +14,9 @@
 - [x] 점심 약속
 - [x] 달록 인프라 설정 정리
 - [x] 테코톡 준비
+
+### 8월 4일 (목)
+- [ ] KDT!!!!!
+- [ ] 아키 파랑의 테코톡 - 리플렉션
+- [ ] 달록 인프라 설정 정리
+- [ ] 데모데이 준비
