--- a/앨버/8월1일~8월5일.md
+++ b/앨버/8월1일~8월5일.md
@@ -13,3 +13,9 @@
 - [x] 약속잡기 달력 연결
 - [x] 근로 admin 완료 계획 세우기
 - [x] 개인 공부 (21:00 ~ 23:00)
+
+# 8월 3일
+
+- [x] 개인 공부
+- [x] 약속 잡기 진행 페이지 달력 연결
+- [x] 프로젝트 QA 및 수정
