--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -38,8 +38,8 @@
 - [x] 티타임 코치 승인 추가 기능 구현
 
 ### 8월 3일 (수)
-- [ ] 티타임 기능 남은 이슈 확인하고 솔브
-- [ ] 야마에게 HTTPS 적용기 전수 받기   
-- [ ] 테코톡 미팅 
-- [ ] PPT 만들기 시작
-- [ ] JPA 책 12장 읽기 
+- [x] 티타임 기능 남은 이슈 확인하고 솔브
+- [x] 야마에게 HTTPS 적용기 전수 받기   
+- [x] 테코톡 미팅 
+- [x] PPT 만들기 시작
+- [x] JPA 책 12장 읽기 
