--- a/에덴/8월1일-8월7일.md
+++ b/에덴/8월1일-8월7일.md
@@ -16,8 +16,17 @@
 
 ## 8월 3일
 
-- [ ] kbj 특강
+- [x] kbj 특강
+- [x] 페어 프로그래밍
+  - [x] 약속잡기 리팩토링
+- [x] 데모데이 준비
+- [x] 운동
+
+## 8월 4일
+
+- [ ] 데일리 회의
 - [ ] 페어 프로그래밍
   - [ ] 약속잡기 리팩토링
 - [ ] 데모데이 준비
+- [ ] 근로 챕터 회의
 - [ ] 운동
