[오리] 8월 4일 계획

--- a/오리/8월1일~8월7일.md
+++ b/오리/8월1일~8월7일.md
@@ -10,7 +10,11 @@
 - [x] 네트워크 공부
 
 ### 8월 3일(수)
-- [ ] 오전 특강
+- [x] 오전 특강
+- [x] 플젝 qa
+- [x] 이미지 업로드 테스트코드
+- [x] 릴리즈환경 구축
+
+### 8월 4일(목)
 - [ ] 플젝 qa
-- [ ] 이미지 업로드 테스트코드
-- [ ] 릴리즈환경 구축
+- [ ] 릴리즈
