[파랑] 8월4일 계획완료

--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -16,7 +16,7 @@
 - [x] 테코톡 준비
 
 ### 8월 4일 (목)
-- [ ] KDT!!!!!
-- [ ] 아키 파랑의 테코톡 - 리플렉션
-- [ ] 달록 인프라 설정 정리
-- [ ] 데모데이 준비
+- [x] KDT!!!!!
+- [x] 아키 파랑의 테코톡 - 리플렉션
+- [x] 달록 인프라 설정 정리
+- [x] 데모데이 준비
