--- a/코린/8월1일-8월7일.md
+++ b/코린/8월1일-8월7일.md
@@ -15,6 +15,6 @@
 - [x] 개발일지 작성
 
 ## 8월4일
-- [ ] 개발일지 보충
-- [ ] 테코톡 보기
-- [ ] lazy loading 페이징 방식 생각해보기
+- [x] 개발일지 보충
+- [x] 테코톡 보기
+- [x] lazy loading 페이징 방식 생각해보기
