--- a/에덴/8월1일-8월7일.md
+++ b/에덴/8월1일-8월7일.md
@@ -24,9 +24,9 @@
 
 ## 8월 4일
 
-- [ ] 데일리 회의
-- [ ] 페어 프로그래밍
-  - [ ] 약속잡기 리팩토링
-- [ ] 데모데이 준비
-- [ ] 근로 챕터 회의
-- [ ] 운동
+- [x] 데일리 회의
+- [x] 페어 프로그래밍
+  - [x] 약속잡기 리팩토링
+- [x] 데모데이 준비
+- [x] 근로 챕터 회의
+- [x] 운동
