--- a/앨버/8월1일~8월5일.md
+++ b/앨버/8월1일~8월5일.md
@@ -22,6 +22,6 @@
 
 # 8월 4일
 
-- [ ] 내일 발표 준비 (시나리오 작성, 데모 준비)
-- [ ] QA 진행 후 버그 수정
-- [ ] react-admin 해보기 (1~2시간)
+- [x] 내일 발표 준비 (시나리오 작성, 데모 준비)
+- [x] QA 진행 후 버그 수정
+- [x] react-admin 해보기 (1~2시간)
