--- a/앨버/8월1일~8월5일.md
+++ b/앨버/8월1일~8월5일.md
@@ -19,3 +19,9 @@
 - [x] 개인 공부
 - [x] 약속 잡기 진행 페이지 달력 연결
 - [x] 프로젝트 QA 및 수정
+
+# 8월 4일
+
+- [x] 내일 발표 준비 (시나리오 작성, 데모 준비)
+- [x] QA 진행 후 버그 수정
+- [x] react-admin 해보기 (1~2시간)
