--- a/잉/7월25일~7월30일.md
+++ b/잉/7월25일~7월30일.md
@@ -45,6 +45,6 @@
 - [x] JPA 책 12장 읽기 
 
 ### 8월 4일 (목)
-- [ ] 티타임 디비 오류 해결
-- [ ] JPA 책 12장 끝까지 읽기 
-- [ ] ppt 수정
+- [x] 티타임 디비 오류 해결
+- [x] JPA 책 12장 끝까지 읽기 
+- [x] ppt 수정
