[티거] 8월 5일 계획 (#785)
세번째 데모데이 끝~!
폭풍처럼 몰아친 스프린트였다
덕분인지 감정 회고 시간에 처음으로 찐 감정 회고를 한 것 같다
네오 말씀처럼 희노애락이 느껴졌다
좋은 팀원이 되어 잘하고 싶다

우테코 노트북 파우치와 후드 집업을 받았다 야호

생리통이 심해졌다
원랜 약을 안 먹어도 버틸 만한데 이젠 무조건 먹게 된다
아픈 티를 안 내고 싶은데 잘 안 돼서 속상하다
잠도 쏟아지고...
최악의 컨디션에서 잘 해낸 이티거 잘했다!
컨디션 때문에 회식에 제대로 참여하지 못했다
밥만 먹고 빨리 돌아왔다
아쉽지만 얼른 회복해서 텐션을 끌어 올려야지~!

이번 주말 내내 갓생 산다!

--- a/티거/8월1일-8월7일.md
+++ b/티거/8월1일-8월7일.md
@@ -19,7 +19,11 @@
 
 ## 8월 3일 (수)
 
-- [ ] 10시 < 레벨3 특강 2 - 우아한형제들 CEO 김범준님 >
-- [ ] 일정 추가 모달 컴포넌트 스타일링
-- [ ] 일정 수정 모달 컴포넌트 구현
-- [ ] 일정 수정 기능 구현
+- [x] 10시 < 레벨3 특강 2 - 우아한형제들 CEO 김범준님 >
+- [x] 일정 추가 모달 컴포넌트 스타일링
+
+## 8월 5일 (금)
+
+- [x] 데모데이 전까지 달리기
+- [x] 데모데이
+- [x] 휴식
