--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -22,7 +22,7 @@
 - [x] 데모데이 준비
 
 ### 8월 5일 (금)
-- [ ] KDT!!!!!!!
-- [ ] 달록 인프라 설정 정리
-- [ ] 달록 데모데이
-- [ ] 근로 회식
+- [x] KDT!!!!!!!
+- [x] 달록 인프라 설정 정리
+- [x] 달록 데모데이
+- [x] 근로 회식
