[파랑] 8월5일 계획 (#784)
* [파랑] 8월5일 계획

* [파랑] 8월5일 계획완료

--- a/파랑/8월1일~8월7일.md
+++ b/파랑/8월1일~8월7일.md
@@ -20,3 +20,9 @@
 - [x] 아키 파랑의 테코톡 - 리플렉션
 - [x] 달록 인프라 설정 정리
 - [x] 데모데이 준비
+
+### 8월 5일 (금)
+- [x] KDT!!!!!!!
+- [x] 달록 인프라 설정 정리
+- [x] 달록 데모데이
+- [x] 근로 회식
