--- a/코린/8월1일-8월7일.md
+++ b/코린/8월1일-8월7일.md
@@ -20,6 +20,6 @@
 - [x] lazy loading 페이징 방식 생각해보기
 
 ## 8월5일
-- [ ] 개발일지 보충
-- [ ] 데모데이 열심히 보기
-- [ ] 회식~!
+- [x] 개발일지 보충
+- [x] 데모데이 열심히 보기
+- [x] 회식~!
