[아서] 8월 8일 완료

--- a/아서/8월8일~8월14일.md
+++ b/아서/8월8일~8월14일.md
@@ -1,6 +1,6 @@
 ## 8월 8일
 
-- [ ] 스프린트 회의
-- [ ] 이미지 서버 같이 고민하기
-- [ ] 알고리즘 리뷰 해주기
-- [ ] 글쓰기 제출하기
+- [x] 스프린트 회의
+- [x] 이미지 서버 같이 고민하기
+- [x] 알고리즘 리뷰 해주기
+- [x] 글쓰기 제출하기
