220809 앨버 계획 완료

--- a/앨버/8월8일~8월12일.md
+++ b/앨버/8월8일~8월12일.md
@@ -1,8 +1,8 @@
 # 8월 8일
 
--  [ ] react admin 공부 (1시간)
--  [ ] 자바스크립트 공부 (30분)
--  [ ] 글쓰기 (1시간)
--  [ ] 근로 회의
--  [ ] 데플 회의
--  [ ] 프로젝트 진행
+-  [x] react admin 공부 (1시간)
+-  [x] 자바스크립트 공부 (30분)
+-  [x] 글쓰기 (1시간)
+-  [x] 근로 회의
+-  [x] 데플 회의
+-  [x] 프로젝트 진행
