--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -2,6 +2,6 @@
 
 ## 8월 8일 (월)
 
-- [ ] 글쓰기 < 레벨 3 - 회고 >
-- [ ] 일정 수정 기능 구현
-- [ ] 일정 삭제 기능 구현
+- [x] 13시 30분 알록달록 스프린트 플래닝 회의
+- [x] 글쓰기 < 레벨 3 - 회고 >
+- [x] 시작 페이지 디자인
