[티거] 8월 9일 계획

--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -5,3 +5,14 @@
 - [x] 13시 30분 알록달록 스프린트 플래닝 회의
 - [x] 글쓰기 < 레벨 3 - 회고 >
 - [x] 시작 페이지 디자인
+
+## 8월 9일 (화)
+
+- [ ] 사이드 바 default 상태 변경
+- [ ] 날짜 사용자 피드백
+- [ ] 일정 기능 구현
+  - [ ] 수정
+  - [ ] 삭제
+- [ ] 글쓰기 리뷰
+  - [ ] 후니
+  - [ ] 케이
