[에덴] 8월 9일 계획 (#798)
* 8월 9일 에덴 계획

* 8월 9일 에덴 계획 완료

--- a/에덴/8월8일-8월14일.md
+++ b/에덴/8월8일-8월14일.md
@@ -1,6 +1,12 @@
-## 8월 1일
+## 8월 8일
 
 - [x] 팀 회의
 - [x] 근로 회의(3-4시, 8-9시)
 - [x] 테코톡 준비
 - [x] 데플 회의
+
+## 8월 9일
+
+- [x] 팀 회의
+- [x] 테코톡 준비
+- [x] 소나큐브 공부
