[파랑] 8월9일 계획완료

--- a/파랑/8월8일~8월14일.md
+++ b/파랑/8월8일~8월14일.md
@@ -5,6 +5,6 @@
 - [x] 22시 데플 회의
 
 ### 8월 9일 (화)
-- [ ] 달록 컬러 관련 기능 구현
-- [ ] 21시 필라테스
-- [ ] 달록 구독 관련 기능 구현
+- [x] 달록 컬러 관련 기능 구현
+- [x] 21시 필라테스
+- [x] 달록 구독 관련 기능 구현
