[파랑] 8월10일 계획

--- a/파랑/8월8일~8월14일.md
+++ b/파랑/8월8일~8월14일.md
@@ -8,3 +8,9 @@
 - [x] 달록 컬러 관련 기능 구현
 - [x] 21시 필라테스
 - [x] 달록 구독 관련 기능 구현
+
+### 8월 10일 (수)
+- [ ] 달록 카테고리 관련 기능 구현
+- [ ] 13시 인터뷰 준비
+- [ ] 14시 네오&브라운 지원플랫폼 인터뷰
+- [ ] 20시 필라테스
