--- a/잉/8월8일~8월12일.md
+++ b/잉/8월8일~8월12일.md
@@ -7,3 +7,8 @@
 - [x] CI/CD prod 분리
 - [x] 로깅 고민 
 - [x] 글쓰기 제출
+
+## 8월 10일 수요일
+- [ ] 티타임 개발- 로깅 전략 고도화.  
+- [ ] 개발 학습 - 트랜잭션 전파.
+- [ ] jpa 14장. 
