[민초] 8월 10일 계획

--- a/민초/8월8일-8월12일.md
+++ b/민초/8월8일-8월12일.md
@@ -6,6 +6,12 @@
 
 # 8.9
 
-- [ ] 리팩토링
-- [ ] 데일리 미팅
-- [ ] 데일리 회고
+- [x] 리팩토링
+- [x] 데일리 미팅
+- [x] 데일리 회고
+
+# 8.10
+
+- [ ] 마광휘님 특강
+- [ ] 남은 이슈 처리
+- [ ] 7인 몹 프로그래밍
