--- a/코린/8월8일-8월14일.md
+++ b/코린/8월8일-8월14일.md
@@ -6,7 +6,7 @@
 
 ## 8월9일
 
-- [ ] 팀 회의
-- [ ] 상품검색 리딩 준비
-- [ ] Fetch Lazy 리딩 준비
-- [ ] JPA 프록시 공부
+- [x] 팀 회의
+- [x] 상품검색 리딩 준비
+- [x] Fetch Lazy 리딩 준비
+- [x] JPA 프록시 공부
