[티거] 8월 10일 계획

--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -8,7 +8,17 @@
 
 ## 8월 9일 (화)
 
-- [ ] 사이드 바 default 상태 변경
+- [x] 사이드 바 default 상태 변경
+- [ ] 날짜 사용자 피드백
+- [ ] 일정 기능 구현
+  - [ ] 수정
+  - [ ] 삭제
+- [x] 글쓰기 읽기
+  - [x] 후니
+  - [x] 케이
+
+## 8월 10일 (수)
+
 - [ ] 날짜 사용자 피드백
 - [ ] 일정 기능 구현
   - [ ] 수정
