[아서] 8월 10일 완료

--- a/아서/8월8일~8월14일.md
+++ b/아서/8월8일~8월14일.md
@@ -16,6 +16,6 @@
 
 ## 8월 10일
 
-- [ ] CloudWatch 공유 자료 만들기
-- [ ] 스프링 스터디 참석
-- [ ] 특강 참석
+- [x] CloudWatch 공유 자료 만들기
+- [x] 스프링 스터디 참석
+- [x] 특강 참석
