--- a/코린/8월8일-8월14일.md
+++ b/코린/8월8일-8월14일.md
@@ -12,6 +12,6 @@
 - [x] JPA 프록시 공부
 
 ## 8월10일
-- [ ] 상품 검색 백엔드 페어
-- [ ] 상품 검색 프론트 페어
-- [ ] Fetch Lazy 리딩 준비
+- [x] 상품 검색 백엔드 페어
+- [x] 상품 검색 프론트 페어
+- [x] Fetch Lazy 리딩 준비
