[파랑] 8월11일 계획

--- a/파랑/8월8일~8월14일.md
+++ b/파랑/8월8일~8월14일.md
@@ -14,3 +14,9 @@
 - [x] 13시 인터뷰 준비
 - [x] 14시 네오&브라운 지원플랫폼 인터뷰
 - [x] 20시 필라테스
+
+### 8월 11일 (목)
+- [ ] 달록 CloudWatch 적용
+- [ ] 달록 설계 고민...
+- [ ] 15시 근로 회의, UI&UX 워크샵
+- [ ] 달록 구독 관련 기능 구현
