--- a/잉/8월8일~8월12일.md
+++ b/잉/8월8일~8월12일.md
@@ -12,3 +12,9 @@
 - [x] 티타임 개발- 로깅 전략 고도화.  
 - [x] 개발 학습 - 트랜잭션 전파.
 - [x] jpa 14장. 
+
+## 8월 11일 목요일
+- [ ] 티타임 개발 - 로깅 슬랙 알람 적용. 
+- [ ] 티타임 개발 - dev, prod 도메인 nginx 설정하기 
+- [ ] jpa 14장 마저 다 읽기. 
+- [ ] 테코톡 미팅
