[민초] 8월 11일 계획

--- a/민초/8월8일-8월12일.md
+++ b/민초/8월8일-8월12일.md
@@ -12,6 +12,13 @@
 
 # 8.10
 
-- [ ] 마광휘님 특강
-- [ ] 남은 이슈 처리
-- [ ] 7인 몹 프로그래밍
+- [x] 마광휘님 특강
+- [x] 남은 이슈 처리
+- [x] 7인 몹 프로그래밍
+
+# 8.11
+
+- [ ] 데일리 미팅
+- [ ] 리팩토링 페어
+- [ ] 데일리 회고
+- [ ] 운동
