[아서] 8월 11일 계획

--- a/아서/8월8일~8월14일.md
+++ b/아서/8월8일~8월14일.md
@@ -19,3 +19,10 @@
 - [x] CloudWatch 공유 자료 만들기
 - [x] 스프링 스터디 참석
 - [x] 특강 참석
+
+## 8월 11일
+
+- [ ] ClouWatch 자료 공유하기
+- [ ] 쿠폰 상세조회 페이지 구현하기
+- [ ] 토비의 스프링 5장 읽기
+
