[티거] 8월 11일 계획

--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -19,10 +19,13 @@
 
 ## 8월 10일 (수)
 
+- [x] 일정 추가 모달 컴포넌트 구현
+- [x] 일정 수정 모달 컴포넌트 구현
+
+## 8월 11일 (목)
+
 - [ ] 날짜 사용자 피드백
+- [ ] 일정 단건 조회 모달 컴포넌트 구현
 - [ ] 일정 기능 구현
   - [ ] 수정
   - [ ] 삭제
-- [ ] 글쓰기 리뷰
-  - [ ] 후니
-  - [ ] 케이
