[아서] 8월 11일 완료

--- a/아서/8월8일~8월14일.md
+++ b/아서/8월8일~8월14일.md
@@ -22,7 +22,7 @@
 
 ## 8월 11일
 
-- [ ] ClouWatch 자료 공유하기
-- [ ] 쿠폰 상세조회 페이지 구현하기
-- [ ] 토비의 스프링 5장 읽기
+- [x] ClouWatch 자료 공유하기
+- [x] 쿠폰 상세조회 페이지 구현하기
+- [x] 토비의 스프링 5장 읽기
 
