[파랑] 8월11일 계획완료

--- a/파랑/8월8일~8월14일.md
+++ b/파랑/8월8일~8월14일.md
@@ -16,7 +16,7 @@
 - [x] 20시 필라테스
 
 ### 8월 11일 (목)
-- [ ] 달록 CloudWatch 적용
-- [ ] 달록 설계 고민...
-- [ ] 15시 근로 회의, UI&UX 워크샵
-- [ ] 달록 구독 관련 기능 구현
+- [x] 달록 CloudWatch 적용
+- [x] 달록 설계 고민...
+- [x] 15시 근로 회의, UI&UX 워크샵
+- [x] 달록 구독 관련 기능 구현
