--- a/잉/8월8일~8월12일.md
+++ b/잉/8월8일~8월12일.md
@@ -14,7 +14,7 @@
 - [x] jpa 14장. 
 
 ## 8월 11일 목요일
-- [ ] 티타임 개발 - 로깅 슬랙 알람 적용. 
-- [ ] 티타임 개발 - dev, prod 도메인 nginx 설정하기 
-- [ ] jpa 14장 마저 다 읽기. 
-- [ ] 테코톡 미팅
+- [x] 티타임 개발 - 로깅 슬랙 알람 적용. 
+- [x] 티타임 개발 - dev, prod 도메인 nginx 설정하기 
+- [x] jpa 14장 마저 다 읽기. 
+- [x] 테코톡 미팅
