--- a/앨버/8월8일~8월12일.md
+++ b/앨버/8월8일~8월12일.md
@@ -21,3 +21,10 @@
 
 - [x] 프로젝트 진행 (백엔드와 페어, 기능 구현)
 - [x] 근로 admin 만들기
+
+# 8월 12일
+
+- [ ] 프로젝트 페어진행 (마감시간 관련 기능)
+- [ ] react-query 도입 진행
+- [ ] 근로 admin 만들기
+- [ ] 회고
