[오리] 8월 12일 계획

--- a/오리/8월8일~8월14일.md
+++ b/오리/8월8일~8월14일.md
@@ -6,5 +6,11 @@
 - [x] 테스트 개선
 
 ### 8월 10일(수)
-- [ ] 이미지 서버 개선
-- [ ] 인증인가 관련 리팩터링
+- [x] 이미지 서버 개선
+- [x] 인증인가 관련 리팩터링
+
+### 8월 12일(금)
+- [ ] 네트워크 공부
+- [ ] 이미지 캐시 서버 구축
+- [ ] 파라미터 별 이미지 전달 값 수정 기능
+- [ ] 팀 내 기술 발표 듣기
