--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -24,8 +24,12 @@
 
 ## 8월 11일 (목)
 
-- [ ] 날짜 사용자 피드백
-- [ ] 일정 단건 조회 모달 컴포넌트 구현
-- [ ] 일정 기능 구현
-  - [ ] 수정
-  - [ ] 삭제
+- [x] 날짜 사용자 피드백
+- [x] 일정 단건 조회 모달 컴포넌트 구현
+
+## 8월 12일 (금)
+
+- [ ] 11시 강의 < TypeScript >
+- [ ] 일정 단건 조회 모달 컴포넌트 리뷰 피드백
+- [ ] 날짜 사용자 피드백 PR
+- [ ] 16시 알록달록 스프린트 회고 회의
