220812 앨버 계획 완료

--- a/앨버/8월8일~8월12일.md
+++ b/앨버/8월8일~8월12일.md
@@ -24,7 +24,7 @@
 
 # 8월 12일
 
-- [ ] 프로젝트 페어진행 (마감시간 관련 기능)
-- [ ] react-query 도입 진행
-- [ ] 근로 admin 만들기
-- [ ] 회고
+- [x] 프로젝트 페어진행 (마감시간 관련 기능)
+- [x] react-query 도입 진행
+- [x] 근로 admin 만들기
+- [x] 회고
