--- a/파랑/8월8일~8월14일.md
+++ b/파랑/8월8일~8월14일.md
@@ -22,7 +22,7 @@
 - [x] 달록 구독 관련 기능 구현
 
 ### 8월 12일 (금)
-- [ ] 달록 소나큐브 적용
-- [ ] 달록 service 리팩토링
-- [ ] 달록 막주차 스프린트 계획
-- [ ] 근로 페어 OR 달록 간단 회식
+- [x] 달록 소나큐브 적용
+- [x] 달록 service 리팩토링
+- [x] 달록 막주차 스프린트 계획
+- [x] 근로 페어 OR 달록 간단 회식
