--- a/앨버/8월8일~8월13일.md
+++ b/앨버/8월8일~8월13일.md
@@ -28,3 +28,11 @@
 - [x] react-query 도입 진행
 - [x] 근로 admin 만들기
 - [x] 회고
+
+# 8월 13일
+
+- [ ] 프로젝트 (마감시간 기능 구현)
+- [ ] react-admin session CRUD 구현
+- [ ] 근로 typescript migration (1/2)
+- [ ] 글 작성 (1시간)
+- [ ] good
