[아서] 8월 15일 완료

--- a/아서/8월 15일~8월21일.md
+++ b/아서/8월 15일~8월21일.md
@@ -1,6 +1,6 @@
 ## 8월 15일
 
-- [ ] 디자인 회의 참석
-- [ ] 쿠폰 상세조회 기능 merge
-- [ ] 토비의 스프링 5장 준비
-- [ ] 글쓰기 PR 리뷰
+- [x] 디자인 회의 참석
+- [x] 쿠폰 상세조회 기능 merge
+- [x] 토비의 스프링 5장 준비
+- [x] 글쓰기 PR 리뷰
