220814 앨버 계획 완료

--- a/앨버/8월8일~8월14일.md
+++ b/앨버/8월8일~8월14일.md
@@ -36,8 +36,8 @@
 
 # 8월 14일
 
-- [ ] 프로젝트 (약속잡기 마감시간 기능 구현, react-query 도입, 약속잡기 링크 추가, 재투표관련 UI, 이전기록 보여주기)
-- [ ] 근로 typescript migration (2/2)
-- [ ] 근로 admin session, mission CRUD
-- [ ] 글작성 끝내기
-- [ ] 나머지 공부
+- [x] 프로젝트 (약속잡기 마감시간 기능 구현, react-query 도입, 약속잡기 링크 추가, 재투표관련 UI, 이전기록 보여주기)
+- [x] 근로 typescript migration (2/2)
+- [x] 근로 admin session, mission CRUD
+- [x] 글작성 끝내기
+- [x] 나머지 공부
