[티거] 8월 16일 계획

--- a/티거/8월8일-8월14일.md
+++ b/티거/8월8일-8월14일.md
@@ -29,7 +29,7 @@
 
 ## 8월 12일 (금)
 
-- [ ] 11시 강의 < TypeScript >
-- [ ] 일정 단건 조회 모달 컴포넌트 리뷰 피드백
-- [ ] 날짜 사용자 피드백 PR
-- [ ] 16시 알록달록 스프린트 회고 회의
+- [x] 11시 강의 < TypeScript >
+- [x] 일정 단건 조회 모달 컴포넌트 리뷰 피드백
+- [x] 날짜 사용자 피드백 PR
+- [x] 16시 알록달록 스프린트 회고 회의
