--- a/코린/8월16일-8월21일.md
+++ b/코린/8월16일-8월21일.md
@@ -1,5 +1,5 @@
 ## 8월16일
-- [ ] 리뷰 삭제시 인벤토리 삭제 기능 구현
-- [ ] 개발일지 보충 및 오늘의 개발일지 작성
-- [ ] 사용자 좋아요 기능 구현
+- [X] 리뷰 삭제시 인벤토리 삭제 기능 구현
+- [x] 개발일지 보충 및 오늘의 개발일지 작성
+- [x] 사용자 좋아요 기능 구현
 
