--- a/에덴/8월16일-8월19일.md
+++ b/에덴/8월16일-8월19일.md
@@ -1,6 +1,6 @@
 ## 8월 16일
 
-- [ ] 팀 회의
-- [ ] 근로 회의(3-4시, 8-9시)
-- [ ] 페어 프로그래밍
-- [ ] 운동
+- [x] 팀 회의
+- [x] 근로 회의(3-4시, 8-9시)
+- [x] 페어 프로그래밍
+- [x] 운동
