--- a/티거/8월15일-8월21일.md
+++ b/티거/8월15일-8월21일.md
@@ -2,6 +2,6 @@
 
 ## 8월 16일 (화)
 
-- [ ] 11시 강의 < TypeScript >
-- [ ] 시작 날짜 및 종료 날짜 재설정 기능 구현
-- [ ] 날짜 단건 조회 모달 구현
+- [x] 11시 강의 < TypeScript >
+- [x] 시작 날짜 및 종료 날짜 재설정 기능 구현
+- [x] 날짜 단건 조회 모달 구현
