--- a/티거/8월15일-8월21일.md
+++ b/티거/8월15일-8월21일.md
@@ -2,18 +2,12 @@
 
 ## 8월 16일 (화)
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 - [x] 11시 강의 < TypeScript >
 - [x] 시작 날짜 및 종료 날짜 재설정 기능 구현
 - [x] 날짜 단건 조회 모달 구현
-=======
-- [ ] 11시 강의 < TypeScript >
-- [ ] 시작 날짜 및 종료 날짜 재설정 기능 구현
-- [ ] 날짜 단건 조회 모달 구현
->>>>>>> 62cbd3f ([티거] 8월 16일 계획)
-=======
-- [x] 11시 강의 < TypeScript >
-- [x] 시작 날짜 및 종료 날짜 재설정 기능 구현
-- [x] 날짜 단건 조회 모달 구현
->>>>>>> 7ceff1b ([티거] 8월 17일 완료)
+
+## 8월 17일 (수)
+
+- [ ] 날짜 단건 조회 모달 스타일링
+- [ ] 일정 수정 에러 해결
+- [ ] 일정 조율 기능 구현
