[파랑] 8월17일 계획완료

--- a/파랑/8월15일~8월21일.md
+++ b/파랑/8월15일~8월21일.md
@@ -5,6 +5,6 @@
 - [x] 내 일정 관련 에러 수정
 
 ### 8월 17일 (수)
-- [ ] QA
-- [ ] 각종 에러 해결
-- [ ] 근로 페어 - 로그인 API 고민
+- [x] QA
+- [x] 각종 에러 해결
+- [x] 근로 페어 - 로그인 API 고민
