--- a/티거/8월15일-8월21일.md
+++ b/티거/8월15일-8월21일.md
@@ -8,6 +8,6 @@
 
 ## 8월 17일 (수)
 
-- [ ] 날짜 단건 조회 모달 스타일링
-- [ ] 일정 수정 에러 해결
-- [ ] 일정 조율 기능 구현
+- [x] 날짜 단건 조회 모달 스타일링
+- [x] 일정 수정 에러 해결
+- [x] 일정 조율 기능 구현
