--- a/티거/8월15일-8월21일.md
+++ b/티거/8월15일-8월21일.md
@@ -5,3 +5,9 @@
 - [x] 11시 강의 < TypeScript >
 - [x] 시작 날짜 및 종료 날짜 재설정 기능 구현
 - [x] 날짜 단건 조회 모달 구현
+
+## 8월 17일 (수)
+
+- [x] 날짜 단건 조회 모달 스타일링
+- [x] 일정 수정 에러 해결
+- [x] 일정 조율 기능 구현
