--- a/코린/8월16일-8월21일.md
+++ b/코린/8월16일-8월21일.md
@@ -3,7 +3,12 @@
 - [x] 개발일지 보충 및 오늘의 개발일지 작성
 - [x] 사용자 좋아요 기능 구현
 
-## 8월16일
-- [ ] 오늘의 개발일지 작성
-- [ ] 사용자 좋아요 기능 구현
-- [ ] 트러블 슈팅
+## 8월17일
+- [x] 오늘의 개발일지 작성
+- [x] 사용자 좋아요 기능 구현
+- [x] 트러블 슈팅
+
+## 8월18일
+- [ ] 사용자 좋아요 기능 마무리
+- [ ] 개발일지 작성
+- [ ] 저녁약속
