[오리] 8월 18일 계획

--- a/오리/8월15일~8월21일.md
+++ b/오리/8월15일~8월21일.md
@@ -1,4 +1,9 @@
 ### 8월 17일(수)
-- [ ] 네트워크 공부
-- [ ] 오브젝트 공부
-- [ ] 혹시 생기는 이슈 처리
+- [x] 네트워크 공부
+- [x] 오브젝트 공부
+- [x] 혹시 생기는 이슈 처리
+
+### 8월 18일(목)
+- [ ] 오전 리뷰
+- [ ] 이미지 서버 수정
+- [ ] 영상
