8월 30일 에덴 계획 완료

--- a/에덴/8월30일-9월4일.md
+++ b/에덴/8월30일-9월4일.md
@@ -1,7 +1,7 @@
 ## 8월 30일
 
-- [ ] 데일리 회의
-- [ ] 오전 강의
-- [ ] 근로 회의
-- [ ] 레벨로그 준비
-- [ ] 운동
+- [x] 데일리 회의
+- [x] 오전 강의
+- [x] 근로 회의
+- [x] 레벨로그 준비
+- [x] 운동
