--- a/앨버/8월30일~9월2일.md
+++ b/앨버/8월30일~9월2일.md
@@ -1,6 +1,20 @@
+## ALL_DAY
+
+- 매일 아침 알고리즘 풀기 (졸리니까)
+- 공부할 때 단순히 읽는 것이 아니라, 탐구를 하면서 하기 (ex. 내용을 정리해서 블로그 글 작성)
+
+
 ## 8월 30일
 
 - [x] 레벨 로그 작성
 - [x] 스프린트4 일정 회의
 - [x] 개인 공부 계획 세우기 (책 읽기, 블로그 글쓰기 등등) - 시간 단위별로 계획을 세워볼까~
 - [x] 프로젝트 리팩토링
+
+
+## 8월 31일
+
+- [ ] 레벨 인터뷰 준비
+- [ ] 리팩토링 (13:00 ~ 16:00)
+- [ ] 네트워크 책 읽기 (최소 30분 이상)
+- [ ] 미션
