[오리] 8월 31일 계획

--- a/오리/8월30일~9월4일.md
+++ b/오리/8월30일~9월4일.md
@@ -1,7 +1,11 @@
 ### 8월 30일(화)
-- [ ] 오전 강의
-- [ ] 레벨로그 준비
-- [ ] 디자인 패턴 cs 정리
-- [ ] matzip 어드민 페이지 구현
-- [ ] 공책 pr 리뷰  
-- [ ] 이미지서버 글 반틈 쓰기
+- [x] 오전 강의
+- [x] 레벨로그 준비
+- [x] 디자인 패턴 cs 정리
+- [x] matzip 어드민 페이지 구현
+- [x] 공책 pr 리뷰  
+- [x] 이미지서버 글 반틈 쓰기
+
+### 8월 31일(수)
+- [ ] 레벨로그
+- [ ] 미션
