8월 31일 에덴 계획 완료

--- a/에덴/8월30일-9월4일.md
+++ b/에덴/8월30일-9월4일.md
@@ -8,8 +8,8 @@
 
 ## 8월 31일
 
-- [ ] 데일리 회의
-- [ ] 미션 수행
-  - [ ] 1단계 마무리하기
-- [ ] 레벨로그 준비
-- [ ] 운동
+- [x] 데일리 회의
+- [x] 미션 수행
+  - [x] 1단계 마무리하기
+- [x] 레벨로그 준비
+- [x] 운동
