220831 앨버 계획 완료

--- a/앨버/8월30일~9월2일.md
+++ b/앨버/8월30일~9월2일.md
@@ -14,7 +14,7 @@
 
 ## 8월 31일
 
-- [ ] 레벨 인터뷰 준비
-- [ ] 리팩토링 (13:00 ~ 16:00)
-- [ ] 네트워크 책 읽기 (최소 30분 이상)
-- [ ] 미션
+- [x] 레벨 인터뷰 준비
+- [x] 리팩토링 (13:00 ~ 16:00)
+- [x] 네트워크 책 읽기 (최소 30분 이상)
+- [x] 미션
