--- a/앨버/8월30일~9월2일.md
+++ b/앨버/8월30일~9월2일.md
@@ -1,6 +1,6 @@
 ## ALL_DAY
 
-- 매일 아침 알고리즘 풀기 (졸리니까)
+- 매일 아침 알고리즘 풀기 (졸리면)
 - 공부할 때 단순히 읽는 것이 아니라, 탐구를 하면서 하기 (ex. 내용을 정리해서 블로그 글 작성)
 
 
@@ -18,3 +18,11 @@
 - [x] 리팩토링 (13:00 ~ 16:00)
 - [x] 네트워크 책 읽기 (최소 30분 이상)
 - [x] 미션
+
+## 9월 1일
+
+- [ ] 레벨 인터뷰준비
+- [ ] 레벨 인터뷰
+- [ ] 프로젝트 리팩토링
+- [ ] 네트워크 책 읽기
+- [ ] 미션  
