[파랑] 9월1일 계획완료

--- a/파랑/8월29일~9월4일.md
+++ b/파랑/8월29일~9월4일.md
@@ -8,7 +8,7 @@
 - [x] 미션 슥 보기
 
 ### 9월 1일 (목)
-- [ ] 달록 스프린트 회의
-- [ ] 입출력 학습 테스트
-- [ ] 톰캣 구현하기 1단계 - GET /index.html 응답하기
-- [ ] 톰캣 구현하기 1단계 - CSS 지원하기
+- [x] 달록 스프린트 회의
+- [x] 입출력 학습 테스트
+- [x] 톰캣 구현하기 1단계 - GET /index.html 응답하기
+- [x] 톰캣 구현하기 1단계 - CSS 지원하기
