[아서] 9월 1일 계획 (#880)
* [아서] 9월 1일 계획

* [아서] 9월 1일 완료

--- a/아서/8월30일~9월4일.md
+++ b/아서/8월30일~9월4일.md
@@ -3,6 +3,15 @@
 - [x] 오전 수업
 - [x] 스프린트 회의
 
+
+
 ## 8월 31일
-- [ ] 예비군
-- [ ] 레벨로그 준비
+- [x] 예비군
+- [x] 레벨로그 준비
+
+
+
+## 9월 1일
+
+- [x] 레벨로그!
+- [x] 프로젝트 회의
