220901 앨버 계획 완료

--- a/앨버/8월30일~9월2일.md
+++ b/앨버/8월30일~9월2일.md
@@ -21,8 +21,8 @@
 
 ## 9월 1일
 
-- [ ] 레벨 인터뷰준비
-- [ ] 레벨 인터뷰
-- [ ] 프로젝트 리팩토링
-- [ ] 네트워크 책 읽기
-- [ ] 미션  
+- [x] 레벨 인터뷰준비
+- [x] 레벨 인터뷰
+- [x] 프로젝트 리팩토링
+- [x] 네트워크 책 읽기
+- [x] 미션  
