[오리] 9월2일 계획

--- a/오리/8월30일~9월4일.md
+++ b/오리/8월30일~9월4일.md
@@ -7,5 +7,10 @@
 - [x] 이미지서버 글 반틈 쓰기
 
 ### 8월 31일(수)
-- [ ] 레벨로그
-- [ ] 미션
+- [x] 레벨로그
+- [x] 미션
+
+### 9월 1일(금)
+- [ ] 오전강의 듣기
+- [ ] pr 리뷰 반영
+- [ ] cs 정리
