[파랑] 9월2일 계획와료

--- a/파랑/8월29일~9월4일.md
+++ b/파랑/8월29일~9월4일.md
@@ -14,8 +14,8 @@
 - [x] 톰캣 구현하기 1단계 - CSS 지원하기
 
 ### 9월 2일 (금)
-- [ ] http 활용 강의
-- [ ] 강의 정리 및 실습 제출
-- [ ] 미션 1단계 PR 제출
-- [ ] 16시 근로 회의
-- [ ] 근로 백엔드 회식
+- [x] http 활용 강의
+- [x] 강의 정리 및 실습 제출
+- [x] 미션 1단계 PR 제출
+- [x] 16시 근로 회의
+- [x] 근로 백엔드 회식
