--- a/파랑/8월29일~9월4일.md
+++ b/파랑/8월29일~9월4일.md
@@ -12,3 +12,10 @@
 - [x] 입출력 학습 테스트
 - [x] 톰캣 구현하기 1단계 - GET /index.html 응답하기
 - [x] 톰캣 구현하기 1단계 - CSS 지원하기
+
+### 9월 2일 (금)
+- [x] http 활용 강의
+- [x] 강의 정리 및 실습 제출
+- [x] 미션 1단계 PR 제출
+- [x] 16시 근로 회의
+- [x] 근로 백엔드 회식
