--- a/앨버/8월30일~9월2일.md
+++ b/앨버/8월30일~9월2일.md
@@ -30,8 +30,8 @@
 
 ## 9월 2일
 
-- [ ] 미션 (09:00 ~ 11:30 or 12:00)
-- [ ] 리팩토링 (13:00 ~ 16:00)
-- [ ] 개인 공부 (16:00 ~ 18:00)
-- [ ] 스터디 과제 (19:00 ~ 21:00)
-- [ ] 미션 (21:00 ~ 23:00)
+- [x] 미션 (09:00 ~ 11:30 or 12:00)
+- [x] 리팩토링 (13:00 ~ 16:00)
+- [x] 개인 공부 (16:00 ~ 18:00)
+- [x] 스터디 과제 (19:00 ~ 21:00)
+- [x] 미션 (21:00 ~ 23:00)
