--- a/코린/8월30일-9월4일.md
+++ b/코린/8월30일-9월4일.md
@@ -11,7 +11,7 @@
 - [x] 미션 시작!
 
 ## 9월2일
-- [ ] 수업 듣기
-- [ ] 실습하기
-- [ ] 미션제출하기
-- [ ] 1단계 리팩토링
+- [x] 수업 듣기
+- [x] 실습하기
+- [x] 미션제출하기
+- [x] 1단계 리팩토링
