--- a/에덴/9월5일-9월11일.md
+++ b/에덴/9월5일-9월11일.md
@@ -1,7 +1,7 @@
 ## 9월 5일
 
-- [ ] 데일리 회의
-- [ ] 미션 2단계
-- [ ] 쓰레드 공부
-- [ ] 근로 회의
-- [ ] 운동
+- [x] 데일리 회의
+- [x] 미션 2단계
+- [x] 쓰레드 공부
+- [x] 근로 회의
+- [x] 운동
