--- a/앨버/9월5일~9월8일.md
+++ b/앨버/9월5일~9월8일.md
@@ -3,3 +3,13 @@
 - [x] 프로젝트 리팩토링
 - [x] 근로회의
 - [x] 미션 PR
+
+
+## 9월 6일
+
+- [ ] 미션 PR 본문 작성 (08:30 ~ 10:00)
+- [ ] 수업 (10:00 ~ 12:00)
+- [ ] 프로젝트 (13:00 ~ 16:00)
+- [ ] javascript 책 읽기 (30분)
+- [ ] 키워드 정리 (1시간)
+- [ ] 네트워크 강의 하나 보기
