--- a/민초/9월5일-9월8일.md
+++ b/민초/9월5일-9월8일.md
@@ -7,7 +7,9 @@
 
 # 9.6
 
-- [ ] FE 강의 10:30~
+- [x] FE 강의 10:30~
 - [ ] 성능 미션 피드백 반영
 - [ ] 앨버 미션 피드백 
-- [ ] 테코톡 편집 마무리.
+- [ ] 테코톡 편집 마무리
+- [ ] 블로그 만들기
+- [ ] 이펙티브 타스 1장 읽고 정리
