--- a/아서/9월5일~9월12일.md
+++ b/아서/9월5일~9월12일.md
@@ -4,6 +4,11 @@
 - [x] 네트워크 공부
 
 ## 9월 6일
-- [ ] Thread 학습
-- [ ] 실습과제 PR
-- [ ] 미션 2단계 리팩터링
+- [x] Thread 학습
+- [x] 실습과제 PR
+- [x] 미션 2단계 리팩터링
+
+## 9월 7일
+- [ ] 미션 2단계 완료
+- [ ] 회원 정보 리팩터링
+- [ ] 스프링 스터디
