[민초] 9월 7일 계획 (#901)
* [민초] 9월 7일 계획

* 완료

--- a/민초/9월5일-9월8일.md
+++ b/민초/9월5일-9월8일.md
@@ -12,3 +12,11 @@
 - [x] 이펙티브 타스 아이템 1 읽고 정리
 - [x] 이펙티브 타스 아이템 2 읽고 정리
 - [x] 이펙티브 타스 아이템 3 읽고 정리
+
+# 9.7
+
+- [x] 이펙티브 타스 아이템 4 읽고 정리
+- [x] 이펙티브 타스 아이템 5 읽고 정리
+- [x] 이펙티브 타스 아이템 6 읽고 정리
+- [x] 앨버 피드백 남기기
+- [x] 미션 피드백 반영 후 리뷰 요청 보내기
